YV-2329 i18n smarting pull updates

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -210,17 +210,17 @@ ar:
     save: "حفظ"
     cancel: "إلغاء"
     try the beta: "جرب الموقع"
-    welcome to the beta: "مرحبا بك في موقع YouVersion.com الجديد!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "أهلاُ وسهلاً بكم في Bible.com !"
+    highlight: "ضع اشارة ضوئية على الآية"
     comment: "تعليق جديد"
     note: "ملاحظة جديدة"
     selected: "اختيار"
     chapter: "إصحاح"
     bible: "الكتاب المقدس"
     notes title: "ملاحظات"
-    friends: "Friends"
+    friends: "أصدقاء"
     groups: "مجموعات"
-    mobile: "جوال"
+    mobile: "تطبيقات الجوال"
     live: "مجموعات/حية"
     first page: "الصفحة الاولى"
     last page: "الصفحة الاخيرة"
@@ -283,7 +283,7 @@ ar:
             edit highlight title: "تعديل تمييز هذا النص"
             edit bookmark title: "تعديل هذه الإشارة المرجعية"
             edit note title: "تعديل هذه الملاحظة"
-            edit subscription: "Edit subscription"
+            edit subscription: "تعديل الإشتراك"
             delete: "مسح"
             delete confirm: "هل أنت متأكد؟"
             delete highlight title: "مسح هذا التمييز للنص"
@@ -355,8 +355,8 @@ ar:
             add friend button title: "ارسل طلب صداقة لـ %{user}"
             accept button: "موافق"
             accept request button: "قبول طلب"
-            ignore button: "تجاهل"
-            ignore request button: "تجاهل طلب"
+            ignore button: "رفض"
+            ignore request button: "رفض الطلب"
     notes: 
         none user: "%{username} لم يسجل اي ملاحظات بعد"
         blank slate: 
@@ -394,7 +394,7 @@ ar:
         all notes: "كل الملاحظات"
         community notes: "ملاحظات المجتمع"
         new note: "ملاحظة جديدة"
-        status field: "Note Status:"
+        status field: "حالة الملاحظة:"
         edit: "تحرير"
         delete: "الغاء هذه الملاحظة"
         confirm delete: "نعم، انا متاكد"
@@ -407,6 +407,7 @@ ar:
         create failure: "خطأ اثناء حفظ الملاحظة"
         destroy success: "تم حذف الملاحظة."
         destroy failure: "خطأ اثناء مسح الملاحظة"
+        update success: "تم تحديث الملاحظة"
     ref: 
         loading secondary: "تحميل مرجع في الاصدار الثانوي"
         clear verses: "إلغاء الآيات المختارة"
@@ -468,12 +469,12 @@ ar:
         edit notifications: "إدارة الإشعارات"
         edit connections: "الحسابات المتصلة"
         edit devices: "الأجهزة المتصلة"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "الإشتراك في خدمة آية اليوم"
+        vod_subscription success: "لقد حَدثت بنجاح إشتراكك في خدمة آية اليوم."
+        vod_subscription failure: "عفواً, طرأت مشكلة خلال تحديث إشتراكك في خدمة آية اليوم."
+        daily email delivery: "تسليم البريد الإلكتروني اليومي"
         time: "الوقت"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "تنبيهات يوميّة لتطبيقات الجوال"
         subscribe: "الإشتراك"
         unsubscribe: "الغاء الاشتراك"
         edit account_existence: "الغاء الحساب"
@@ -482,7 +483,7 @@ ar:
         no devices download copy: "بناءا علي الكتاب المقدس على الانترنت YouVersion.com  ،تطبيق الكتاب المقدس كتاب مقدس مجاني محمول والذي يمكن تحميله تقريبا على أي جهاز محمول. تطبيق الكتاب المقدس يسمح للمستخدمين قراءة الكتاب المقدس، مشاركة آيات مع شبكاتهم الاجتماعية، اضافة إشارات مرجعية للمقاطع المفضلة لديهم، وأكثر من ذلك —all ،  الكل بتصميم يواكب  نمط حياتهم المتنقلة علي نحو متزايد. قم بزيارة <a href='https://www.bible.com/app'>bible.com/app</a> من الجهاز المحمول الخاص بك لتحميل تطبيق الكتاب المقدس واربط حسابك!"
         yes delete: "نعم، قم بالغاء حسابي"
         account delete success: "تم حذف حسابك على YouVersion بنجاح. نتمنى أن تجد طرق أخرى للتواصل مع الكتاب المقدس. بعض هذه البرامج من الممكن أن يكون مفيد لك وانت تتقدم للأمام: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "إذا قمت بحذف حسابك، سوف تقوم بالتخلص من كل معلوماتك، الذاكرة، والتخصيصات (مثل الملاحظات، الاشارات المرجعية، النصوص المميز، الخ) في موقع YouVersion.com وفي تطبيق الكتاب المقدس. هذا الأمر لا يمكن الرجوع فيه عن طريك او طريق فريقنا. إذا كنت متأكد أنك ترغب في الاستمرار، استمر في الأسفل"
+        delete account description: "إذا لغيت حسابك, سوف تمحي بشكلٍ دائمٍ كل معلوماتك, وتاريخ إستخدامك, واضافاتك الشخصيّة (مثل ملاحظاتك, وإشاراتك المرجعّية وأبرز الآيات وغيرهم) في Bible.com وتطبيق الكتاب المقدس. من غير الممكن أن تعكس هذا الإجراء أو أن يعكس فريقنا هذا الإجراء. إذا كنت متأكدا أنك ترغب في إكمال الإجراء, تابع إلى الفقرة التالية."
         user recent activity: "النشاط في الآونة الأخيرة %{user}"
         my notes: "ملاحظات"
         user notes: "ملاحظات %{user}"
@@ -633,6 +634,7 @@ ar:
             notification errors: "الخطأ (الأخطاء) التالية منعت تحديث الاشعارت الخاصة بك:"
             edit: "تعديل"
             bio: "المعلومات الشخصية‌"
+            complete_first_last: "أكمل حسابك من خلال كتابة إسمك وإسم عائلتك."
         password: 
             updated: "لقد قمت بتحديث كلمة المرور بنجاح!"
             error: "عفوا، هناك خطأ في تحديث كلمة المرور"
@@ -819,7 +821,7 @@ ar:
     licenses: 
         authorized: 
             heading: "تم التصريح للمحتوى الخاص بك"
-            description: "You may now <a href='%{content_link}'>view the content you purchased</a> from %{vendor} on YouVersion!"
+            description: "تستطيع الآن<a href='%{content_link}'> مشاهدة المحتوى الذي اشتريته </a> من%{vendor} على YouVersion!"
         has errors: "كانت هناك أخطاء مع طلبك:"
         confirm: 
             email: "للأذن لمحتوى الفيديو الذي اشتريته، يرجى مراجعة بريدك الإلكتروني لرسالة تأكيد إلكترونية من YouVersion واضغط على الرابط بداخلها لتأكيد تسجيلك."
@@ -830,8 +832,8 @@ ar:
         vendor_transaction_id: 
             duplicate: "تعريف العملية: تم بالفعل تسجيل رقم تعريف المعاملات"
         auth: 
-            login notice: "To validate your purchased content, please login to your YouVersion account below or <a href='/sign-up?source=licenses'>%{signup}</a>."
-            signup notice: "To validate your purchased content, sign up for a free YouVersion account below or <a href='/sign-in?source=licenses'>%{login}</a> if you already have an account."
+            login notice: "لتفعيل محتوى ما قمت بشراءه، يرجى تسجيل الدخول إلى حساب YouVersion الخاص بك أدناه أو &lt;a href='/sign-up?source=licenses'&gt;{0}&lt;/a&gt;.<a href='/sign-up؟source=licenses'>%{signup}."
+            signup notice: "للتحقق من صحة المحتوى الذي إشتريته، سجل مجاناً في حساب YouVersion أدناه أو <a href='/sign-in?source=licenses'>%{login}</a>إذا كان لديك بالفعل حساب"
             signup link text: "قم بالتسجيل للحصول على حساب مجاني"
             login link text: "تسجيل الدخول"
     registration: 
@@ -936,7 +938,7 @@ ar:
         facebook: "YouVersion على فيسبوك"
         twitter: "YouVersion على تويتر"
         support: "تحتاج مساعدة في YouVersion؟"
-        lead copy: "تطبيق الكتاب المقدس من YouVersion.com هو كتاب مقدس إلكتروني يمكن تحميله على أي تليفون محمول مجاناً . تطبيق الكتاب المقدس يتيح للمسخدمين أن يقرأوا الكتاب المقدس، مشاركة بالآيات على مواقع التواصل الالكتروني ، اضافة علامات مرجعية للمقاطع المفضلة، بالإضافة إلي الكثير من الخصائص الأخرى&mdash، كل هذا مقدم بطريقة تتناسب مع نمط الحياة المتنقلة المعتمدة بشكل كبير  على الأجهزة المحمولة."
+        lead copy: "إستناداً على الكتاب المقدس على الانترنت, Bible.com, تطبيق الكتاب المقدس هو تطبيقٌ مجانيٌ ومن الممكن تحميله على كل جوال تقريباً. تطبيق الكتاب المقدس يسمح للمستخدمين بقراءة الكتاب المقدس، مشاركة الآيات مع شبكاتهم الاجتماعية، وضع إشارات مرجعية لمقاطعهم المفضلة، وأكثر منذلك - كل هذا مقترح بأسلوبٍ يواكب نمط حياتهم الجوالة على نحو متزايد."
         resources title: "موارد الصحافة"
         now title: "حدث اليوم في مجتمع YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ ar:
                 subscribe heading: "الاشتراك في خطط الكتاب المقدس."
                 subscribe description: "تغطية الكتاب المقدس كله، أوالتركيز على موضوع ما، أو قراءة تعبدية من معلم الموهوب. اختر خطتك وكل يوم ستجد مختارات من الكتاب المقدس في انتظارك."
                 download heading: "تأخذ الكتاب المقدس معك."
-                download description: "<a href='http://youversion.com/download'>حمل</a>  تطبيق الكتاب المقدس مجانا على أي جهاز محمول. عند استخدام التطبيق المحمول، ستتزامن تلقائيا عبر جميع الأجهزة الخاصة بك كل من ملاحظاتك، وإشاراتك المرجعية، والنصوص المميزة، وخطط القراءة، وأكثر"
+                download description: "<a href='https://bible.com/download'>حمل</a>تطبيق الكتاب المقدس مجانا على أي جهاز محمول. عند استخدام التطبيق ، سيتم التزامن تلقائيا في جميع الأجهزة الخاصة بك و ستجد كل ملاحظاتك، وإشاراتك المرجعية، والنصوص المميزة، وخطط القراءة، وأكثر"
             get started: "ابدأ مع حسابك المجاني."
             word with you: "كلمة الله معك."
             download action: "تحميل تطبيق الكتاب المقدس"
@@ -1027,7 +1029,7 @@ ar:
     app errors: 
         404 plans explanation: "هل تبحث عن  <a href='%{plan_path}'>%{title}</a>  خطة؟"
         404 contact support: "هل تواجه مشكلة؟ اتصل بفريق الدعم <a href='%{support_url}'>support team</a>."
-        404 explanation: "You might try starting again from the <a href='%{reader_path}'>home page</a>. Still having trouble? Contact our <a href='%{support_url}'>support team</a>."
+        404 explanation: "ربما عليك أن تبدأ مرة أخرى من<a href='%{reader_path}'>الصفحة الرئيسيّة</a>.لا زلت تواجه مشاكل؟ تواصل مع<a href='%{support_url}'>فريق الدعم</a>."
         404 message: "نأسف، الصفحة التي تبحث عنها  لا يمكن العثور عليها."
         408 message: "نأسف الخادم الخاص بنا لم يستجب في الوقت المناسب."
         408 explanation: "لقد تم تنبيهنا وسوف نتعامل مع القضايا المستمرة في أسرع وقت ممكن. دعنا نرى ان كان بإمكاننا العودة بك الي قراءاتك  للكتاب المقدس."
