--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -210,7 +210,7 @@ bg:
     save: "Запази"
     cancel: "Откажи"
     try the beta: "Опитай БЕТА версията"
-    welcome to the beta: "Добре дошли в новата YouVersion.com!"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "Highlight Verse"
     comment: "Нов коментар"
     note: "Нова бележка"
@@ -220,7 +220,7 @@ bg:
     notes title: "Бележки"
     friends: "Моите приятели"
     groups: "Групи"
-    mobile: "Мобилен"
+    mobile: "Mobile Apps"
     live: "На живо/групи"
     first page: "Първа страница"
     last page: "Последна страница"
@@ -355,8 +355,8 @@ bg:
             add friend button title: "Изпрати на %{user} покана за приятелство"
             accept button: "Приемете"
             accept request button: "Приемете"
-            ignore button: "Игнориране"
-            ignore request button: "Игнориране"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} няма бележки."
         blank slate: 
@@ -407,6 +407,7 @@ bg:
         create failure: "Грешка при запис на бележка"
         destroy success: "Бележката е изтрита"
         destroy failure: "Грешка при изтриване на бележка"
+        update success: "Note updated"
     ref: 
         loading secondary: "Зареждане във вторичната версия"
         clear verses: "Изчисти избраните стихове"
@@ -482,7 +483,7 @@ bg:
         no devices download copy: "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle. Visit  <a href='https://www.bible.com/app'>bible.com/app</a> from your mobile device to download the Bible App and connect your account!"
         yes delete: "Да, изтрий профила ми"
         account delete success: "Твоят профил с YouVersion е изтрит. Надяваме се да продължиш да използваш Библията чрез следните приложения: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Ако изтриете профила си, губите всичката си информация, история и персонализиране (като бележки, отбелязвания, маркиране и т.н.) в YouVersion.com и Библията. Това действие е небратимо. Продължете само ако сте сигурни, че искате да направите това."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "Последни действия на %{user}"
         my notes: "Моит бележки"
         user notes: "Бележки на %{user}"
@@ -633,6 +634,7 @@ bg:
             notification errors: "Следните грешка(и) не позволяват обновяването на твоите съобщения:"
             edit: "Редактирай"
             bio: "Биография"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Паролата е обновена."
             error: "Проблем при промяна на паролата."
@@ -936,7 +938,7 @@ bg:
         facebook: "YouVersion във Facebook"
         twitter: "YouVersion в Twitter"
         support: "Нужда от помощ с YouVersion?"
-        lead copy: "Построена на основата на интернет Библията, YouVersion.com, Библейската апликация е безплатна мобилна Библия, която може да бъде инсталирана на всеки телефон. Библейското приложение позволява на всеки да чете Библията, да споделя стих в социалните мрежи, да отбелязва любими пасажи —all в удобен формат за всака мобилна дейност."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Информация за пресата"
         now title: "Какво става днес в YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ bg:
                 subscribe heading: "запиши се за план за четене на БИБЛИЯТА"
                 subscribe description: "Прочети цялата Библия, разгледай тема или прочети поучение. ИЗбери своя план и всеки ден ще откриеш избор от Библията за четене"
                 download heading: "Вземи БИБЛИЯТА с теб"
-                download description: "<a href='http://youversion.com/download'>Изтегли</a> БИБЛИЯТА безплатно за толкова много устройства."
+                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
             get started: "Започни с безплатен профил"
             word with you: "Божието слово с теб"
             download action: "Изтегли БИБЛИЯТА"
