--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -210,8 +210,8 @@ ca:
     save: "Desa"
     cancel: "Cancel·la"
     try the beta: "Prova la Beta"
-    welcome to the beta: "Benvingut/uda al nou YouVersion.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Welcome to Bible.com!"
+    highlight: "Ressalta verset"
     comment: "Nou comentari"
     note: "Nova nota"
     selected: "Seleccionat/ada"
@@ -220,7 +220,7 @@ ca:
     notes title: "Notes"
     friends: "Amics"
     groups: "Grups"
-    mobile: "Mòbil"
+    mobile: "Mobile Apps"
     live: "En directe/Grups"
     first page: "Primera pàgina"
     last page: "Última pàgina"
@@ -355,8 +355,8 @@ ca:
             add friend button title: "Enviar-li a %{user} una sol·licitud d'amistat"
             accept button: "Accepta"
             accept request button: "Accepta la sol·licitud"
-            ignore button: "Ignora"
-            ignore request button: "Ignora la sol·licitud"
+            ignore button: "Rebutja"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} encara no ha pres notes."
         blank slate: 
@@ -394,7 +394,7 @@ ca:
         all notes: "Totes les notes"
         community notes: "Notes de la comunitat"
         new note: "Nova nota"
-        status field: "Note Status:"
+        status field: "Status de la nota"
         edit: "Editar"
         delete: "Elimina aquesta nota"
         confirm delete: "Sí, n'estic segur/a"
@@ -407,6 +407,7 @@ ca:
         create failure: "Error en guardar la nota"
         destroy success: "Nota suprimida"
         destroy failure: "Error en suprimir la nota"
+        update success: "Note updated"
     ref: 
         loading secondary: "Carregant la referència d'una segona versió"
         clear verses: "Desmarca els versets"
@@ -482,7 +483,7 @@ ca:
         no devices download copy: "Amb base en la Bíblia en línia, YouVersion.com, l'aplicació de la Bíblia és una Bíblia mòbil i gratuïta que es pot instal · lar en gairebé qualsevol dispositiu mòbil. La aplicació de la Bíblia permet als usuaris llegir la Bíblia, compartir versets en les seves xarxes socials, marcar els seus passatges preferits i molt més; tot això en un format que s'adiu amb el seu estil de vida, cada vegada més mòbil. Visita <a href='https://www.bible.com/app'>Bible.com/app</a> des del teu dispositiu mòbil per descarregar l'aplicació de la Bíblia i connectar el teu compte!"
         yes delete: "Sí, elimina el meu compte"
         account delete success: "La teu compte de YouVersion s'ha eliminat correctament. Esperem que continuïs trobant maneres significatives per interactuar amb la Bíblia. Algunes d'aquestes aplicacions poden ser útils a mesura que avances:<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps</a>"
-        delete account description: "Si elimines el teu compte, s'eliminarà permanentment tota la teva informació, l'historial i la personalització (com notes, marcadors, ressaltats, etc) dins YouVersion.com i l'aplicació de la Bíblia. Aquesta acció no pot ser revertida per tu ni pel nostre equip. Si estàs segur que t'agradaria continuar endavant, continua endavant."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "Activitat recent de %{user}"
         my notes: "Notes"
         user notes: "Notes de %{user}"
@@ -633,6 +634,7 @@ ca:
             notification errors: "Els errors següents no ens deixen actualitzar els avisos:"
             edit: "Editar"
             bio: "Biografia"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Has actualitzat la teva contrasenya amb èxit!"
             error: "Ho sentim, però hi ha hagut algun problema en canviar la teva contrasenya."
@@ -936,7 +938,7 @@ ca:
         facebook: "YouVersion al Facebook"
         twitter: "YouVersion al Twitter"
         support: "Necessites ajuda amb YouVersion?"
-        lead copy: "Basada en la Bíblia en línia, YouVersion.com, l'aplicació de la Bíblia és una Bíblia mòbil lliure que es pot instal·lar en gairebé qualsevol telèfon. L'aplicació de la Bíblia permet als usuaris llegir els versets de la Bíblia, compartir amb les seves xarxes socials, marcar els seus passatges preferits i molt més, tot això en un format que es manté al dia amb el seu estil de vida cada vegada més mòbil."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Recursos de premsa"
         now title: "Avui a la comunitat YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ ca:
                 subscribe heading: "Subscriu-te a Plans de la Bíblia."
                 subscribe description: "Cobreix tota la Bíblia, concentra't en un tema, o llegeix un devocional d'un mestre. Escull el teu pla i cada dia trobaràs una selecció de la Bíblia esperant-te."
                 download heading: "Porta la Bíblia amb tu."
-                download description: "<a href='http://youversion.com/download'>Descarrega</a> l'aplicació de la Bíblia gratuïtament a qualsevol dispositiu mòbil. Quan utilitzis l'aplicació, les teves notes i marcadors i molt més es sincronitzaran automàticament en tots els teus dispositius."
+                download description: "<a href='https://bible.com/download'>Descarrega</a> l'Aplicació de la Bíblia gratuïtament a qualsevol dispositiu mòbil. Quan utilitzis l'aplicació, les teves notes i marcadors i molt més se sincronitzaran automàticament en tots els teus dispositius."
             get started: "Fes-te un compte gratuït."
             word with you: "La Paraula de Déu és amb tu."
             download action: "Descarrega l'aplicació de la Bíblia"
@@ -1027,7 +1029,7 @@ ca:
     app errors: 
         404 plans explanation: "Busques el pla <a href='%{plan_path}'>%{title}</a> ?"
         404 contact support: "Tens algun problema? Contacta amb el nostre <a href='%{support_url}'>equip de suport</a>."
-        404 explanation: "Desafortunadament, no hem trobat la pàgina <a href='%{reader_path}'>home page</a>. Si penses que la pàgina hauria d'existir, deixa que el nostre <a href='%{support_url}'>equip d'ajuda</a> ho sàpiga."
+        404 explanation: "Pots intentar tornar a començar des de la<a href='%{reader_path}'>pàgina d'inici</a>. Encara tens problemes?<a href='%{support_url}'>Contacta el nostre</a>equip de suport."
         404 message: "Ho sentim, la pàgina que busques no es pot trobar."
         408 message: "Malauradament els nostres servidors no han respost a temps."
         408 explanation: "Hem rebut l'alerta i corregirem la incidència tan aviat com ens sigui possible. Intentarem que puguis seguir llegint per on anaves!"
