--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -210,8 +210,8 @@ cs:
     save: "Uložit"
     cancel: "Zrušit"
     try the beta: "Vyzkoušejte Beta verzi"
-    welcome to the beta: "Vítejte na novém YouVersion.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Vítejte na Bible.com!"
+    highlight: "Zvýraznit verš"
     comment: "Nový komentář"
     note: "Nová poznámka"
     selected: "Zvolené"
@@ -220,7 +220,7 @@ cs:
     notes title: "Poznámky"
     friends: "Přátelé"
     groups: "Skupiny"
-    mobile: "Mobil"
+    mobile: "Mobilní aplikace"
     live: "Živě/Skupiny"
     first page: "První strana"
     last page: "Poslední strana"
@@ -355,8 +355,8 @@ cs:
             add friend button title: "Poslat uživateli %{user} žádost o přátelství"
             accept button: "Přijmout"
             accept request button: "Přijmout žádost"
-            ignore button: "Ignorovat"
-            ignore request button: "Ignorovat žádost"
+            ignore button: "Odmítnout"
+            ignore request button: "Odmítnout žádost"
     notes: 
         none user: "%{username} zatím neudělal žádnou poznámku."
         blank slate: 
@@ -394,7 +394,7 @@ cs:
         all notes: "Všechny poznámky"
         community notes: "Poznámky komunity"
         new note: "Nová poznámka"
-        status field: "Note Status:"
+        status field: "Stav poznámky:"
         edit: "Upravit"
         delete: "Smazat tuto poznámku"
         confirm delete: "Ano, jsem si jistý/á"
@@ -407,6 +407,7 @@ cs:
         create failure: "Chyba při ukládání poznámky"
         destroy success: "Poznámka smazána"
         destroy failure: "Chyba během mazání poznámky"
+        update success: "Poznámka aktualizována"
     ref: 
         loading secondary: "Načítají se odkazy v sekundárním překladu..."
         clear verses: "Zrušit označení veršů"
@@ -482,7 +483,7 @@ cs:
         no devices download copy: "Založeno na online Bibli YouVersion, aplikace Bible je zdarma pro mobily a může být instalována na téměř všechny mobilní telefony. Aplikace Bible umožňuje uživatelům číst Bibli, sdílet verše na sociálních sítích, zvýrazňovat oblíbené pasáže a více—vše ve formátu, který jde ruku v ruce s životním stylem uživatelů mobilních zařízení. Navštivte <a href='https://www.bible.com/app'>bible.com/app</a> z vašeho mobilního zařízení, stáhněte si aplikaci a připojte se k vašemu účtu!"
         yes delete: "Ano, smazat můj účet"
         account delete success: "Váš YouVersion účet byl úspěšně vymazán. Doufáme, že budete mít stále další způsoby, jak přijít do kontaktu s Biblí. Některé z těchto aplikacích vám mohou pomoci, až budete pokračovat: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Pokud si smažete váš účet, ztratíte veškeré své informace, historii a údaje (jako poznámky, záložky, zvýraznění atd.) z YouVersion a aplikace Bible. Tento krok již nemůžete vzít zpět. Pokud si jste jistí, pokračujte níže."
+        delete account description: "Pokud smažete vás účet, dojede k trvalém odstranění všech vašich informací, historie, a personalizace (jako jsou poznámky, záložky, zvýraznění atd.) na Bible.com a v aplikaci Bible. Tuto akci již nelze vrátit zpět ani vámi, ani naším týmem. Pokud jste si opravdu jistí tím co děláte, pokračujte níže."
         user recent activity: "Nedávná aktivita uživatele %{user}"
         my notes: "Moje poznámky"
         user notes: "Poznámky uživatele %{user}"
@@ -633,6 +634,7 @@ cs:
             notification errors: "Následující chyby zabránily aktualizování vašich upozornění:"
             edit: "Upravit"
             bio: "Životopis"
+            complete_first_last: "Dokončete nastavení profilu vyplněním křestního jména a příjmení"
         password: 
             updated: "Úspěšně jste aktualizovali vaše heslo!"
             error: "Omlouváme se, vyskytla se chyba během změny vašeho hesla."
@@ -936,7 +938,7 @@ cs:
         facebook: "YouVersion na Facebooku"
         twitter: "YouVersion na Twitteru"
         support: "Potřebujete pomoc s YouVersion?"
-        lead copy: "Aplikace Bible je zcela zdarma, je založená na on-line Bibli YouVersion a je ji možno nainstalovat skoro na jakýkoli mobilní telefon. Aplikace Bible umožňuje svým uživatelům číst Bibli, sdílet verše na sociální sítě, vytvářet si záložky ze svých oblíbených pasáží a více—vše ve formátu, který drží krok s narůstajícím mobilním životním stylem."
+        lead copy: "Aplikace Bible je bezplatná přenosná Bible založená na Bibli z Bible.com a může být instalována na téměř všechny mobilní telefony. Aplikace Bible umožňuje uživatelům číst Bibli, sdílet verše na vlastní sociální síti, založit si oblíbené pasáže, a více. Vše ve formátu, který drží krok se stále mobilnějším životním stylem."
         resources title: "Zdroje pro tisk"
         now title: "Dnes v komunitě YouVersion"
         resources: 
@@ -997,8 +999,8 @@ cs:
                 study description: "<strong>Zvýrazňujte</strong> vaší oblíbenou barvou, vytvářejte <strong>záložky</strong> k vašim oblíbeným biblickým veršům a pište si poznámky o tom, co se právě učíte. Netrávíte jen čas s Božím Slovem, vytváříte historii vaší interakce s Biblí."
                 subscribe heading: "Vyberte si plán čtení Bible."
                 subscribe description: "Přečtěte celou Bibli, zaměřte se na určité téma, nebo čtěte zamyšlení od obdarovaného učitele. Zvolte si plán a každý den najdete úsek z Bible čekající jen na vás."
-                download heading: "Vezměte si Bibli s sebou."
-                download description: "<a href='http://youversion.com/download'>Stáhněte si</a> aplikaci Bible zdarma na jakékoli mobilní zařízení. Během používání aplikace se všechny vaše poznámky, záložky, zvýraznění, plány a další budou automaticky synchronizovat na všech vašich zařízeních."
+                download heading: "Berte si svou Bibli vždy s sebou."
+                download description: "<a href='https://bible.com/download'>Stáhněte si</a> aplikaci Bible zdarma na jakékoli mobilní zařízení. Během používání aplikace se všechny vaše poznámky, záložky, zvýraznění, plány a další budou automaticky synchronizovat na všech vašich zařízeních."
             get started: "Začněte s bezplatným účtem."
             word with you: "Boží Slovo je s vámi."
             download action: "Stáhněte si aplikaci Bible"
