--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -210,7 +210,7 @@ da:
     save: "Gem"
     cancel: "Fortryd"
     try the beta: "Prøv beta´en"
-    welcome to the beta: "Velkommen til det nye YouVersion.com!"
+    welcome to the beta: "Velkommen til Bible.com!"
     highlight: "Marker vers"
     comment: "Ny kommentar"
     note: "Ny note"
@@ -220,7 +220,7 @@ da:
     notes title: "Noter"
     friends: "Venner"
     groups: "Grupper"
-    mobile: "Mobil"
+    mobile: "Mobil Apps"
     live: "Live/Grupper"
     first page: "Første side"
     last page: "Sidste side"
@@ -355,8 +355,8 @@ da:
             add friend button title: "Send %{user} en venneforespørgsel"
             accept button: "Accepter"
             accept request button: "Accepter forespørgsel"
-            ignore button: "Ignorer"
-            ignore request button: "Ignorer forespørgsel"
+            ignore button: "Afslå"
+            ignore request button: "Afvis forespørgsel"
     notes: 
         none user: "%{username} har ikke lavet nogen noter endnu."
         blank slate: 
@@ -407,6 +407,7 @@ da:
         create failure: "Fejl da note skulle gemmes"
         destroy success: "Note slettet"
         destroy failure: "Error ved sletning af note"
+        update success: "Note opdateret"
     ref: 
         loading secondary: "Indlæser referencer i sekundær version..."
         clear verses: "Ryd valgte vers"
@@ -482,7 +483,7 @@ da:
         no devices download copy: "Baseret på online bibel, YouVersion.com, Bible App er en gratis mobil bibel, der kan installeres på næsten alle mobile enheder. Bible App giver brugerne mulighed for at læse Bibelen, deler vers med deres sociale netværk, bogmærke deres foretrukne passager og mere — alt i et format, der er tilpasset  deres stadig mere mobile livsstil. Besøg <a href='https://www.bible.com/app'> bible.com/app</a> fra din mobile enhed til at hente Bibel App´en og forbind med din konto!"
         yes delete: "Ja, slet min konto"
         account delete success: "Din YouVersion konto er blevet slettet. Vi håber, at du fortsætter med at finde meningsfulde måder at interagere med Bibelen. Nogle af disse apps kan være nyttigt, som du bevæger dig fremad: <a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
-        delete account description: "Hvis du sletter din konto, vil du permanent fjerne alle dine oplysninger, historie og personalisering (såsom notater, bogmærker, markeringer, osv.) hos YouVersion.com og Bible App. Denne handling kan ikke fortrydes af dig eller af vores team. Hvis du er sikker på at dette, så fortsæt nedenfor."
+        delete account description: "Hvis du sletter din konto vil du permanent slette al din information, historie og personlige ting (noter, bogmærker, markeringer osv.) med Bible.com og Bible App. Denne handling kan ikke køres tilbage af hverken dig eller vores team. Hvis du er sikker på at du vil fortsætte så gå videre herunder."
         user recent activity: "%{user}'s nyelige aktivitet"
         my notes: "Noter"
         user notes: "%{user}'s noter"
@@ -633,6 +634,7 @@ da:
             notification errors: "Følgende fejl forhindrede opdateringen af dine notifikationer:"
             edit: "Rediger"
             bio: "Bio"
+            complete_first_last: "Gør din profil færdig ved at udfylde dit for og efternavn"
         password: 
             updated: "Succes! Du har opdateret dit password."
             error: "Beklager, der var en fejl i ændringen af dit password."
@@ -936,7 +938,7 @@ da:
         facebook: "YouVersion på Facebook"
         twitter: "YouVersion på Twitter"
         support: "Behøver du hjælp til YouVersion?"
-        lead copy: "Baseret på online bibel, YouVersion.com, Bibelen App er en gratis mobil bibel, der kan installeres på næsten alle telefon. Bibelen App giver brugerne mulighed for at læse Bibelen, deler vers med deres sociale netværk, bogmærke deres foretrukne passager og mere-alt i et format, der holder op med deres stadig mere mobile livsstil."
+        lead copy: "Baseret på online Bible App, Bible App er en gratis mobil Bibel der kan installeres på næsten alle telefoner. Bible App giver brugere mulighed for at læse Bibelen, dele vers med deres sociale netværk, bogmærker og deres favorit afsnit og mere - alt i et format der passer til mobile livsstil."
         resources title: "Presse ressourcer"
         now title: "Idag i YouVersion Gruppe"
         resources: 
@@ -998,7 +1000,7 @@ da:
                 subscribe heading: "Abonner på læse planer"
                 subscribe description: "Dæk hele Bibelen, fokus på et emne, eller læse en andagt fra en begavet lærer. Vælg din plan, og hver dag vil du finde et Bibel udvalg der venter på dig."
                 download heading: "Tag Bibelen med dig"
-                download description: "<a href='http://youversion.com/download'>Hent</a> Bible App gratis på enhver mobil enhed. Når du bruger den mobile app, vil dine noter, bogmærker, højdepunkter, planer og meget mere automatisk blive synkroniseret på tværs af alle dine enheder."
+                download description: "<a href='https://bible.com/download'>Hent</a> Bible App gratis på enhver mobil enhed. Når du bruger den mobile app, vil dine noter, bogmærker, højdepunkter, planer og meget mere automatisk blive synkroniseret på tværs af alle dine enheder."
             get started: "Kom i gang med en gratis konto"
             word with you: "Gud´s ord er med dig."
             download action: "Hent Bible App"
