--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -210,7 +210,7 @@ fi:
     save: "Tallenna"
     cancel: "Peruuta"
     try the beta: "Kokeile Beta-versiota"
-    welcome to the beta: "Tervetuloa uudistettuun YouVersion.comiin!"
+    welcome to the beta: "Tervetuloa sivustolle Bible.com!"
     highlight: "Korosta jae"
     comment: "Uusi kommentti"
     note: "Uusi muistiinpano"
@@ -220,7 +220,7 @@ fi:
     notes title: "Muistiinpanot"
     friends: "Ystävät"
     groups: "Ryhmät"
-    mobile: "Mobiili"
+    mobile: "Mobiilisovellukset"
     live: "Live/Ryhmät"
     first page: "Ensimmäinen sivu"
     last page: "Viimeinen sivu"
@@ -355,7 +355,7 @@ fi:
             add friend button title: "Lähetä %{user}:lle ystäväpyyntö"
             accept button: "Hyväksy"
             accept request button: "Hyväksy pyyntö"
-            ignore button: "Ohita"
+            ignore button: "Hylkää"
             ignore request button: "Hylkää pyyntö"
     notes: 
         none user: "%{username} ei ole vielä tehnyt muistiinpanoja."
@@ -407,6 +407,7 @@ fi:
         create failure: "Muistiinpanon tallennus epäonnistui"
         destroy success: "Muistiinpano poistettu"
         destroy failure: "Muistiinpanon poistaminen epäonnistui"
+        update success: "Muistiinpano päivitetty"
     ref: 
         loading secondary: "Ladataan kohtaa toisesta käännöksestä..."
         clear verses: "Tyhjennä valitut jakeet"
@@ -482,7 +483,7 @@ fi:
         no devices download copy: "YouVersionin verkkoraamattuun perustuva Raamattusovellus on ilmainen Raamattu, jonka voi asentaa lähes kaikkiin mobiililaitteisiin. Raamattusovelluksessa voit lukea Raamattua, jakaa jakeita yhteisöpalveluihin, lisätä kirjanmerkkejä lempikohtiin ja paljon muuta—kaikki tämä on saatavilla paikasta riippumatta. Lataa Raamattusovellus mobiililaitteellesi osoitteesta <a href='https://www.bible.com/app'>bible.com/app</a> ja yhdistä laite tiliisi!"
         yes delete: "Kyllä, poista tilini"
         account delete success: "YouVersion-tilisi poistettiin onnistuneesti. Toivomme, että löydät jatkossakin merkityksellisiä tapoja olla tekemisissä Raamatun kanssa. Joku näistä sovelluksista voi olla avuksi siirtyessäsi eteenpäin: <a href= http://www.youversion.com/free-bible-apps> www.youversion.com/free-bible-apps </a>"
-        delete account description: "Jos poistat tilisi, kaikki tiedot, historia ja personointi häviää (kuten muistiinpanot, kirjanmerkit, korostukset jne.) YouVersion.comista ja Raamattusovelluksesta. Tätä toimintoa et itse, eikä tiimisi, voi perua. Jos varmasti haluat edetä, voit tehdä niin alla."
+        delete account description: "Jos poistat tilisi, kaikki tietosi, toimintahistoria ja personointi (kuten muistiinpanot, kirjanmerkit, korostukset jne.) tuhoutuvat välittömästi Bible.com-sivustolta ja Raamattusovelluksesta. Tätä toimintoa ei voi perua. Jos varmasti haluat edetä, jatka alta."
         user recent activity: "Käyttäjän %{user} viimeaikainen toiminta"
         my notes: "Muistiinpanot"
         user notes: "Käyttäjän %{user} muistiinpanot"
@@ -633,6 +634,7 @@ fi:
             notification errors: "Virheet, jotka estivät ilmoitustesi päivittämisen:"
             edit: "Muokkaa"
             bio: "Omat tiedot"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Salasanasi päivittäminen onnistui!"
             error: "Salansanasi vaihdossa tapahtui virhe."
@@ -936,7 +938,7 @@ fi:
         facebook: "YouVersion Facebookissa"
         twitter: "YouVersion Twitterissä"
         support: "Tarvitsetko apua YouVersionin käytössä?"
-        lead copy: "YouVersion.comin verkkoraamattuun perustuva Raamattusovellus on ilmainen Raamattu, jonka voi asentaa lähes jokaiseen puhelimeen. Raamattusovelluksella käyttäjät voivat lukea Raamattua, jakaa jakeita yhteisöpalveluissa, lisätä kirjanmerkkejä lempikappaleisiinsa, ja enemmän—tämä kaikki tavalla joka mukatuu heidän yhä lisääntyvään mobiiliin elämäntapaansa."
+        lead copy: "Verkkoraamattuun, Bible.com, perustuva Raamattusovellus on ilmainen mobiiliraamattu, jonka voi asentaa melkeinpä mihin tahansa puhelimeen. Raamattusovellus mahdollistaa Raamatun lukemisen, jakeiden jakamisen sosiaalisessa mediassa, kirjanmerkkien tekemisen lempijakeista, ja paljon muuta - kaikki yhä enenevissä määrin mobiilimman elämäntyylin muodossa."
         resources title: "Viestintämateriaali"
         now title: "Tänään Youversion-yhteisössä"
         resources: 
@@ -998,7 +1000,7 @@ fi:
                 subscribe heading: "Kirjaudu lukusuunnitelmiin."
                 subscribe description: "Lue koko Raamattu, keskity tiettyihin aihealueisiin tai lue hartauksia lahjakkailta opettajilta. Valitse suunnitelmasi ja sinua odottaa joka päivä valikoima raamatunkohtia."
                 download heading: "Ota Raamattu mukaasi."
-                download description: "<a href='http://youversion.com/download'>Lataa</a> Raamattusovellus ilmaiseksi mille tahansa mobiililaitteelle. Kun käytät mobiilisovellusta, muistiinpanosi, kirjanmerkkisi, korostuksesi, suunnitelmasi ja paljon muuta synkronoituu automaattisesti kaikille laitteillesi."
+                download description: "<a href='https://bible.com/download'>Lataa</a> Raamattusovellus ilmaiseksi mille tahansa mobiililaitteelle. Kun käytät mobiilisovellusta, muistiinpanosi, kirjanmerkkisi, korostuksesi, suunnitelmasi ja paljon muuta synkronoituu automaattisesti kaikille laitteillesi."
             get started: "Aloita ilmainen käyttö."
             word with you: "Jumalan Sana on kanssasi."
             download action: "Lataa Raamattusovellus"
