--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -210,7 +210,7 @@ hi:
     save: "Save"
     cancel: "रद्द करें"
     try the beta: "Beta का उपयोग करके देखिये।"
-    welcome to the beta: "YouVersion.com के नवीन संस्करण में आपका स्वागत हैं।"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "Highlight Verse"
     comment: "नई टिप्पणी"
     note: "नई टिपण्णी"
@@ -220,7 +220,7 @@ hi:
     notes title: "टिप्पणियाँ"
     friends: "मित्र"
     groups: "समूह"
-    mobile: "मोबाइल"
+    mobile: "Mobile Apps"
     live: "लाइव/समूह"
     first page: "प्रथम पृष्ट"
     last page: "आखरी पृष्ट"
@@ -355,8 +355,8 @@ hi:
             add friend button title: "%{user} को मित्र अनुरोध भेजे"
             accept button: "सहमत होना"
             accept request button: "मित्रता कबूल करे"
-            ignore button: "अनदेखा करना"
-            ignore request button: "अनुरोध अनदेखा करिए"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} के द्वारा कोई नोट्स निर्मित नहीं किया गया हैं।"
         blank slate: 
@@ -407,6 +407,7 @@ hi:
         create failure: "नोट सेविंग में त्रुटि"
         destroy success: "नोट डिलीट हुआ"
         destroy failure: "नोट डिलीट करने में त्रुटि"
+        update success: "Note updated"
     ref: 
         loading secondary: "माध्यमिक संस्करण में रिफरेन्स लोड किया जा रहा हैं ......."
         clear verses: "चयनित पधों को क्लियर करें"
@@ -482,7 +483,7 @@ hi:
         no devices download copy: "ऑनलाइन बाइबिल पर आधारित  YouVersion एक निशुल्क: बाइबिल App, जो मोबाइल बाइबिल हैं जिसे लगभग किसी भी फ़ोन पर इनस्टॉल किया जा सकता हैं। बाइबिल  App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर शेयर करने ,बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं। विजिट करे अपने मोबाइल डिवाइस पर बाइबिल App डाउनलोड करने के लिए और अपने अकाउंट कनेक्ट करने हेतु विवरण के लिए <a href='https://www.bible.com/app'>bible.com/app</a>"
         yes delete: "हाँ, मेरा अकाउंट डिलीट कीजिए"
         account delete success: "आपका YouVersion अकाउंट सफलतापूर्वक डिलीट किया गया हैं। हम आशा करते हैं की आप बाइबिल से जुड़े रहने की अन्य कोशिश करेंगे| आप अभी भी कुछ app उपयोग कर सकते हैं जैसे <a href=http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "यदि आप अपने अकाउंट को डिलीट करते हैं तो आप स्थायी रूप से आपकी जानकारी, इतिहास और नीजी कार्य (जैसे टिपण्णी, बुकमार्क और  हाइलाइट आदि) जो YouVersion.com के अन्तर्गत हैं, हट जाएगी। यह कारवाई आप के द्वारा या हमारी टीम के द्वारा पुन: प्रारंभ करने में नामुमकिन हैं। यदि आप निश्चित हैं, कृपया अपनी कारवाई जारी रखे।"
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "%{user} ताज़ा गतिविधियाँ"
         my notes: "टिप्पणियाँ"
         user notes: "%{user}s के टिप्पणियाँ"
@@ -633,6 +634,7 @@ hi:
             notification errors: "निम्नलिखित error(s) के कारण आपकी टिपण्णी updation में असमर्थ:"
             edit: "संपादन"
             bio: "अपने बारे में"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "मुबारक हो! आपका पासवर्ड अपडेट हुआ।"
             error: "क्षमा कीजिए,आपका पासवर्ड बदलने में त्रुटी पाया गया।"
@@ -936,7 +938,7 @@ hi:
         facebook: "YouVersion फेसबुक पर"
         twitter: "YouVersion ट्विट्टर पर"
         support: "क्या आप YouVersion उपयोग के लिए मदद चाहते हैं?"
-        lead copy: "बाइबिल App ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फोन पर इन्स्टॉल किया जा सकता हैं।बाइबिल App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर शेयर करने, बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं।"
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "प्रेस के द्वारा उपलब्ध संसाधने"
         now title: "YouVersion समुदाय में आज की ताज़ी जानकारी"
         resources: 
@@ -998,7 +1000,7 @@ hi:
                 subscribe heading: "बाइबिल पाठक योजना के सदस्य बने।"
                 subscribe description: "सम्पूर्ण बाइबिल पढ़े,प्रत्येक विषय पर अपना ध्यान केंद्रित कर पढ़े ,या प्रतिभावान बाइबिल गुरु द्वारा तैयार डिवोशनल पढ़े।अपना पाठक योजना चुने और हर दिन आप पाएंगे आपके इंतज़ार में बाइबिल पाठक योजना।"
                 download heading: "बाइबिल हमेशा आपके साथ।"
-                download description: "<a href='http://youversion.com/download'>डाउनलोड</a>करिए बाइबिल App नि:शुल्क किसी भी मोबाइल डिवाइस पर।जब आप इस मोबाइल App का उपयोग करेंगे उस समय आपके द्वारा निर्मित हाईलाइट,बुकमार्क,पाठक योजना तथा और अधिक सामग्री स्वचालित आपके दूसरे डिवाइस से सिंक हो जायेगी।"
+                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
             get started: "अपना नि:शुल्क अकाउंट प्रारंभ करे।"
             word with you: "प्रभु का वचन हमेशा आपके साथ।"
             download action: "बाइबिल App डाउनलोड करे।"
