--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -210,7 +210,7 @@ hu:
     save: "Mentés"
     cancel: "Mégsem"
     try the beta: "Bétateszt"
-    welcome to the beta: "Isten hozott az új YouVersion.com-on!"
+    welcome to the beta: "Üdvözlünk a Bible.com-on!"
     highlight: "Vers kiemelése"
     comment: "Új hozzászólás"
     note: "Új jegyzet"
@@ -220,7 +220,7 @@ hu:
     notes title: "Jegyzetek"
     friends: "Barátok"
     groups: "Csoportok"
-    mobile: "Mobil"
+    mobile: "Mobil alkalmazások"
     live: "Élő/Csoportok"
     first page: "Első oldal"
     last page: "Utolsó oldal"
@@ -355,8 +355,8 @@ hu:
             add friend button title: "Küldj %{user} nak/nek egy barátkérést"
             accept button: "Elfogad"
             accept request button: "Elfogadom a felkérést"
-            ignore button: "Mellőz"
-            ignore request button: "A felkéréssel nem foglalkozom"
+            ignore button: "Elutasít"
+            ignore request button: "Kérés elutasítása"
     notes: 
         none user: "%{username} még nem készített jegyzetet"
         blank slate: 
@@ -407,6 +407,7 @@ hu:
         create failure: "Hiba történt a jegyzet mentésekor"
         destroy success: "jegyzet törölve"
         destroy failure: "Hiba történt a jegyzet törlésekor"
+        update success: "A jegyzet frissítve"
     ref: 
         loading secondary: "Referencia betöltése a másodlagos verzióban..."
         clear verses: "Kiválasztott versek törlése"
@@ -482,7 +483,7 @@ hu:
         no devices download copy: "Az online Bibliára alapozva a YouVersion Biblia alkalmazás egy ingyenes mobil Biblia, amit csaknem bármilyen mobil készülékre le lehet tölteni, A Biblia alkalmazás lehetővé teszi a felhasználók számára, hogy olvassák a Bibliát, megosszanak igeverseket a közösségi hálózataikon, könyvjelzőt tegyenek a kedvenc részeikhez és még sok mást; mindezt olyan módon, ami alkalmazkodik az egyre inkább mozgásban lévő életstílusukhoz. Látogass el a <a href='https://www.bible.com/app'>bible.com/app</a> a mobilkészülékedről, hogy letöltsd a Biblia alkalmazást és csatlakozz a fiókodhoz!"
         yes delete: "Igen, töröld a fiókom"
         account delete success: "A YouVersion fiókod meg lett szüntetve. Reméljük, meg fogod találni a megfelelő módot, hogy kapcsolatban maradj a Bibliával. A következő alkalmazások segíthetnek a jövőben:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Ha törlöd a fiókodat, a YouVersion-ből és a Biblia alkalmazásból minden információ, előzmény és személyre szabás végleg törlődik  (ilyenek a jegyzetek, könyvjelzők, kiemelések stb.) Ezt a műveletet sem Te, sem mi nem tudjuk visszavonni. Ha biztosan folytatni akarod, az alábbiakban megteheted."
+        delete account description: "Ha törlöd a fiókodat, végleg el fog veszni a Bible.com és a Biblia alkalmazás által tárolt minden adatod, naplód és az általad készített megjegyzések, könyvjelzők, kiemelések, stb. Ezt a műveletet nem tudod visszavonni, és a mi csapatunk sem tud ebben segíteni. Ha biztos vagy benne, folytasd alul."
         user recent activity: "%{user} legutóbbi tevékenysége"
         my notes: "Jegyzetek"
         user notes: "%{user} jegyzetei"
@@ -633,6 +634,7 @@ hu:
             notification errors: "A következő hiba(k) akadályozta(k) meg az értesítéseid frissítését:"
             edit: "Szerkesztés"
             bio: "Bemutatkozás"
+            complete_first_last: "Töltsd fel a profilodat: írd be a kereszt- és a vezetékneved"
         password: 
             updated: "Sikerült! Frissítetted a jelszavadat."
             error: "Sajnáljuk, hiba lépett fel a jelszavad megváltoztatása közben."
@@ -936,7 +938,7 @@ hu:
         facebook: "YouVersion a Facebookon"
         twitter: "YouVersion a Twitteren"
         support: "Segítségre van szükséged a YouVersionhöz?"
-        lead copy: "A  YouVersion.com online Bibliára alapozva, a  Biblia alkalmazás egy ingyenes hordozható Biblia, amit csaknem bármelyik telefonra lehet installálni. A  Biblia alkalmazás segítségével a felhasználók olvashatják a Bibliát, megoszthatnak igeverseket a világhálón, könyvjelzővel megjelölhetik kedvenc igehelyeiket és sok minden mást, olyan formában, mely lépést tart egyre inkább mozgásban levő életstílusukkal."
+        lead copy: "Az online Biblia, a Bible.com, alapján készített Biblia alkalmazás egy ingyenes mobil alkalmazás, ami szinte minden telefonra telepíthető. A Biblia alkalmazás segítségével a felhasználók olvashatják a Bibliát, megoszthatnak verseket a közösségi hálójukon, könyvjelzőt készíthetnek kedvenc fejezetükről, és egyebeket is - mindezt olyan formában, ami egyre jobban illeszkedik a mobil életstílusukhoz."
         resources title: "Sajtó források"
         now title: "Ma a YouVersion közösségben"
         resources: 
@@ -998,7 +1000,7 @@ hu:
                 subscribe heading: "Iratkozz fel Biblia tervekre."
                 subscribe description: "Vedd át az egész Bibliát, koncentrálj egy témára vagy olvass el egy áhítatot egy áldott tanítótól. Válassz egy tervet és minden nap egy Biblia részlet fog várni rád."
                 download heading: "Vidd magaddal a Bibliát."
-                download description: "<a href='http://youversion.com/download'>Töltsd le az</a> ingyen a Biblia alkalmazást bármilyen mobil készülékre. Amikor használod a mobil alkalmazást, a jegyzeteidet, a könyvjelzőket, a kiemeléseket, a terveket vagy egyebet, az automatikusan szinkronizálva lesz minden készülékeden."
+                download description: "<a href='https://bible.com/download'>Töltsd le</a> az ingyenes Biblia alkalmazást bármilyen mobil készülékre. Amikor a mobil alkalmazást használod, a jegyzeteid, a könyvjelzőid, a kiemeléseid, a terveid és minden egyebed automatikusan szinkronizálva lesz minden készülékeden."
             get started: "Kezdd el ingyenes fiókoddal."
             word with you: "Isten Igéje veled van."
             download action: "Töltsd le a Biblia alkalmazást"
