--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -210,7 +210,7 @@ it:
     save: "Salva"
     cancel: "Annulla"
     try the beta: "Prova la Beta"
-    welcome to the beta: "Benvenuto al nuovo YouVersion.com!"
+    welcome to the beta: "Benvenuti su Bible.com!"
     highlight: "Evidenzia Versetto"
     comment: "Nuovo Commento"
     note: "Nuova Nota"
@@ -220,7 +220,7 @@ it:
     notes title: "Note"
     friends: "Amici"
     groups: "Gruppi"
-    mobile: "Dispositivo Mobile"
+    mobile: "App Mobili"
     live: "Live/Gruppi"
     first page: "Prima Pagina"
     last page: "Ultima Pagina"
@@ -355,8 +355,8 @@ it:
             add friend button title: "Invia a %{user} una richiesta di amicizia"
             accept button: "Accetta"
             accept request button: "Accetta richiesta"
-            ignore button: "Ignora"
-            ignore request button: "Ignora richiesta"
+            ignore button: "Rifiutare"
+            ignore request button: "Rifiutare richiesta"
     notes: 
         none user: "%{username} non ha scritto ancora una nota."
         blank slate: 
@@ -407,6 +407,7 @@ it:
         create failure: "Errore nel salvare la nota"
         destroy success: "Nota eliminata"
         destroy failure: "Errore nell'eliminazione della nota"
+        update success: "Nota aggiornata"
     ref: 
         loading secondary: "Caricando Riferimento nella Versione Secondaria..."
         clear verses: "Cancellare Versetti Selezionati"
@@ -482,7 +483,7 @@ it:
         no devices download copy: "Basato sulla Bibbia online, YouVersion, l'App Bibbia è una Bibbia mobile gratuita che si può installare su quasi tutti i dispositivi mobili. L'App Bibbia permette agli utenti di leggere la Bibbia, condividere dei versetti sui social network, creare dei segnalibri per i loro passi preferiti, e more—all in un formato che si adatta al loro stile di vita sempre più mobile. Visita <a href='https://www.bible.com/app'>bible.com/app</a> con il tuo dispositivo mobile per scaricare l'App Bibbia e associare il tuo account!"
         yes delete: "Sì, Elimina il Mio Account"
         account delete success: "Il tuo account YouVersion è stato eliminato con successo. Speriamo che continuerai a trovare dei modi significativi per interagire con la Bibbia. Alcune di questi app potrebbero esserti d'aiuto in futuro: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Se elimini il tuo account, eliminerai in modo definitivo tutte le tue informazioni, cronologia e personalizzazioni (come le note, i segnalibri, le evidenziazioni, ecc.) su YouVersion.com e nell'App Bibbia. Quest'azione non può essere annulata né da te, né dalla nostra equipe. Se sei certo di continuare, procedi qui sotto."
+        delete account description: "Se cancelli il tuo account, eliminerai in modo permanente tutte le tue informazioni, cronologia e personalizzazione (come note, segnalibri, evidenziazioni, ecc.) nell'ambito di Bible.com e l'App Bibbia. Quest'azione non può essere annullata né da te né dal nostro team. Se sei certo di voler procedere, continua sotto."
         user recent activity: "Attività recente di %{user}"
         my notes: "Note"
         user notes: "Note di %{user}"
@@ -633,6 +634,7 @@ it:
             notification errors: "I(l) seguente/i errore/i ha(nno) impedito l'aggiornamento delle tue notifiche:"
             edit: "Modifica"
             bio: "Biografia"
+            complete_first_last: "Completa il tuo profilo aggiungendo il tuo nome e cognome"
         password: 
             updated: "Sei riuscito ad aggiornare la tua password."
             error: "Scusa, c'è stato un errore durante la modifica della tua password."
@@ -936,7 +938,7 @@ it:
         facebook: "YouVersion su Facebook"
         twitter: "YouVersion su Twitter"
         support: "Hai bisogno d'aiuto con YouVersion?"
-        lead copy: "Basato sulla Bibbia online, YouVersion.com, l'App Bibbia è una Bibbia mobile gratuita che si può installare su quasi ogni telefono. L'App Bibbia permette agli utenti di leggere la Bibbia, condividere dei versetti sui social network, creare dei segnalibri per i loro passi preferiti, e more—all in un formato che si adatta al loro stile di vita sempre più mobile."
+        lead copy: "Basata sulla Bibbia online, Bible.com, l'App Bibbia è una Bibbia mobile gratuita che può essere installata su quasi ogni telefono. L'App Bibbia permette agli utenti di leggere la Bibbia, condividere versetti sui loro social network, creare segnalibri per i passi preferiti, e più ancora - il tutto in un formato che tiene il passo con il loro stile di vita sempre più mobile."
         resources title: "Risorse per la Stampa"
         now title: "Oggi nella comunità di YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ it:
                 subscribe heading: "Sottoscrivi dei Piani di Lettura della Bibbia."
                 subscribe description: "Leggi tutta la Bibbia, metti a fuoco un argomento, o leggi degli scritti devozionali di un bravo insegnante. Scegli il tuo piano e troverai ogni giorno una porzione della Bibbia che ti attende."
                 download heading: "Porta la Bibbia con te."
-                download description: "<a href='http://youversion.com/download'>Scarica</a> l'App Bibbia gratuitamente su ogni dispositivo mobile. Quando usi l'app mobile, i tuoi appunti, segnalibri, evidenziazioni, piani ed altro saranno sincronizzati automaticamente su tutti i tuoi dispositivi."
+                download description: "<a href='https://bible.com/download'>Scarica</a> l'App Bibbia gratuitamente su ogni dispositivo mobile. Quando usi l'app mobile, i tuoi appunti, segnalibri, evidenziazioni, piani ed altro saranno sincronizzati automaticamente su tutti i tuoi dispositivi."
             get started: "Comincia con il tuo account gratuito."
             word with you: "La Parola di Dio è con te."
             download action: "Scarica l'App Bibbia"
