--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -210,8 +210,8 @@ mk:
     save: "Зачувај"
     cancel: "Откажи"
     try the beta: "Пробај ја бета верзијата"
-    welcome to the beta: "Добредојде во новиот YouVersion.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Добредојде на Bible.com!"
+    highlight: "Нагласи го стихот"
     comment: "Нов коментар"
     note: "Нова белешка"
     selected: "Селектирано"
@@ -220,7 +220,7 @@ mk:
     notes title: "Белешки"
     friends: "Пријатели"
     groups: "Групи"
-    mobile: "Мобилен"
+    mobile: "Апликации за мобилен"
     live: "Во живо/групи"
     first page: "Прва страница"
     last page: "Последна страница"
@@ -251,12 +251,12 @@ mk:
         users like this: "На %{last_liker_link} и %{more_link} му се допаѓа ова"
         vod: 
             title: "Стих на денот"
-            get daily email: "Get daily email"
+            get daily email: "Претплати се за дневна е-пошта"
             subscribe: "Претплати се"
             update: "Ажурирај"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Откажи ја претплатата"
             version: "Верзија"
-            view more: "View More"
+            view more: "Види повеќе"
             time: "Време"
         friendship: 
             now friends: "Сега си пријател со"
@@ -283,7 +283,7 @@ mk:
             edit highlight title: "Редактирај го ова нагласување"
             edit bookmark title: "Редактирај го овој обележувач"
             edit note title: "Редактирај ја оваа белешка"
-            edit subscription: "Edit subscription"
+            edit subscription: "Промени ја претплатата"
             delete: "Избриши"
             delete confirm: "Дали си сигурен?"
             delete highlight title: "Избриши го ова нагласување"
@@ -355,8 +355,8 @@ mk:
             add friend button title: "Испрати на %{user} барање за пријателство"
             accept button: "Прифати"
             accept request button: "Прифати го барањето"
-            ignore button: "Игнорирај"
-            ignore request button: "Игнорирај го барањето"
+            ignore button: "Одбиј"
+            ignore request button: "Одбиј ја поканата"
     notes: 
         none user: "%{username} нема земено воопшто белешки."
         blank slate: 
@@ -394,7 +394,7 @@ mk:
         all notes: "Сите белешки"
         community notes: "Белешки на заедницата"
         new note: "Нова белешка"
-        status field: "Note Status:"
+        status field: "Статус на белешката:"
         edit: "Уреди"
         delete: "Избриши ја оваа белешка"
         confirm delete: "Да, сигурен сум"
@@ -407,6 +407,7 @@ mk:
         create failure: "Грешка во зачувување на белешката"
         destroy success: "Белешката е избришана"
         destroy failure: "Грешка во бришење на белешката"
+        update success: "Белешката е ажурирана"
     ref: 
         loading secondary: "Вчитување референци за втората верзија..."
         clear verses: "Отселектирај ги селектираните стихови"
@@ -468,21 +469,21 @@ mk:
         edit notifications: "Управувај со пораките"
         edit connections: "Поврзани профили"
         edit devices: "Поврзани уреди"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Опции за претплата за Стих на денот"
+        vod_subscription success: "Успешно ја ажурираше претплатата за Стих на денот!"
+        vod_subscription failure: "Жалам, имаше проблем со ажурирањето на твојата претплата за Стих на денот!"
+        daily email delivery: "Испорака на дневна е-пошта"
         time: "Време"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Дневни принудни известувања за мобилни апликации"
         subscribe: "Претплати се"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Откажи ја претплатата"
         edit account_existence: "Избриши профил"
         delete account button: "Избриши го мојот YouVersion профил"
         no devices: "Ниту еден уред не е поврзан со твојот YouVersion профил"
         no devices download copy: "Напојувана од Библијата, достапна на Интернет преку YouVersion.com, апликацијата „Библија“ е бесплатна мобилна Библија која може да се инсталира речиси на секој телефон. Апликацијата „Библија“ овозможува корисниците да ја читаат Библијата, да споделуваат стихови на нивните социјални мрежи, да ги обележуваат омилените стихови, и повеќе — сето тоа во формат кој е во тек со нивниот мобилен животен стил. Посети ја <a href='https://www.bible.com/app'>bible.com/app</a> на твојот телефон за да ја симнеш апликацијата „Библија“ и да се поврзеш со твојот профил!"
         yes delete: "Да, избриши го мојот YouVersion профил"
         account delete success: "Твојот YouVersion профил беше успешно избришан. Се надеваме дека ќе продолжиш да ја користиш Библијата на значаен начин. Некои од следниве апликации можат да ти помогнат понатаму: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Ако го избришеш профилот, засекогаш ќе ги изгубиш сите информации, историја и персонализација (н.п.р. белешки, обележувачи, означувања, итн.) на YouVersion.com и Библиската Апликација. Оваа акција не може да ја поврати ниту ти ниту нашиот тим. Ако сигурно го сакаш ова, продолжи понатаму."
+        delete account description: "Ако ја избришеш твојата сметка, трајно ќе избришеш лични податоци, историја и поставки (како на пр. белешки, обележувачи, нагласувања и сл.) во Bible.com и апликацијата „Библија”. Овој процес неможе да биде вратен наназад ниту од нас, ниту пак од нашиот тим. Ако си сигурен дека сакаш да продолжиш со процесот, тогаш повели според упатствата подолу."
         user recent activity: "Скорешните активности на %{user}"
         my notes: "Белешки"
         user notes: "Белешките на %{user}"
@@ -633,6 +634,7 @@ mk:
             notification errors: "Следниве грешка(и) спречија ажурирање на твоите пораки:"
             edit: "Уреди"
             bio: "Биографија"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Успешно ја ажурира својата лозинка."
             error: "Имаше грешка при менувањето на лозинката."
@@ -936,7 +938,7 @@ mk:
         facebook: "YouVersion на Facebook"
         twitter: "YouVersion на Twitter"
         support: "Ти треба помош со YouVersion?"
-        lead copy: "Врз основа на онлајн Библијата, YouVersion.com, Библиската Апликација е бесплатна мобилна Библија која може да се инсталира на речиси секој телефон. Таа овозможува корисниците да ја читаат Библијата, да споделуваат стихови со нивните социјални мрежи, да ги обележуваат омилените стихови, и многу— сето тоа во формат кој е во тек со нивниот се повеќе мобилен животен стил."
+        lead copy: "Базирана на Bible.com, апликацијата „Библија” е бесплатна мобилна Библија која може да се инсталира на речиси било кој мобилен телефон. Апликацијата „Библија” им овозможува на корисниците да ја читаат Библијата, да споделуваат стихови на нивните социјални мрежи, да ги обележуваат нивните омилени пасуси и уште многу друго—сето тоа во формат кој е во тек со модерниот животен стил кој се' повеќе е во движење."
         resources title: "За медиумите"
         now title: "Денес во заедницата на YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ mk:
                 subscribe heading: "Претплати се на Библиски план."
                 subscribe description: "Покриј ја целата Библија, фокусирај се на тема, или читај молитвеник од надарен учител. Одбери го твојот план и секој ден ќе најдеш Библиска селекција која те чека тебе."
                 download heading: "Земи ја Библијата со себе."
-                download description: "<a href='http://youversion.com/download'>Симни ја</a> бесплатната апликација Библија за секој мобилен уред. Кога ја користиш мобилната апликација, твоите белешки, обележувачи, подвлекувања, планови, и сѐ друго ќе бидат автоматски синхронизирани на сите твои уреди."
+                download description: "<a href='https://bible.com/download'>Симни ја</a> бесплатната апликација Библија за секој мобилен уред. Кога ја користиш мобилната апликација, твоите белешки, обележувачи, подвлекувања, планови, и сѐ друго ќе бидат автоматски синхронизирани на сите твои уреди."
             get started: "Започни со твојата бесплатна сметка."
             word with you: "Божјиот збор е со тебе."
             download action: "Симни ја апликацијата Библија"
