--- a/config/locales/ms.yml
+++ b/config/locales/ms.yml
@@ -210,8 +210,8 @@ ms:
     save: "Selamatkan"
     cancel: "Batalkan"
     try the beta: "Cubailah versi Beta"
-    welcome to the beta: "Selamat datang ke YouVersion.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Selamat datang ke Bible.com!"
+    highlight: "Highlight Ayat"
     comment: "Komen Baru"
     note: "Nota Baru"
     selected: "Terpilih"
@@ -220,7 +220,7 @@ ms:
     notes title: "Nota"
     friends: "Sahabat"
     groups: "Group"
-    mobile: "Mobil"
+    mobile: "App Mobil"
     live: "Acara Langsung/Group"
     first page: "Halaman Pertama"
     last page: "Halaman Terakhir"
@@ -251,12 +251,12 @@ ms:
         users like this: "%{last_liker_link} dan %{more_link} like ini"
         vod: 
             title: "Ayat harian"
-            get daily email: "Get daily email"
+            get daily email: "Dapatkan e-mel harian"
             subscribe: "Langgan"
             update: "Update"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Berhenti melanggan"
             version: "Versi"
-            view more: "View More"
+            view more: "Lihat Lebih Banyak"
             time: "Masa"
         friendship: 
             now friends: "Anda sekarang bersahabat dengan"
@@ -283,7 +283,7 @@ ms:
             edit highlight title: "Edit highlight ini"
             edit bookmark title: "Edit bookmark ini"
             edit note title: "Edit nota ini"
-            edit subscription: "Edit subscription"
+            edit subscription: "Edit langganan"
             delete: "Hapuskan"
             delete confirm: "Adakah anda pasti?"
             delete highlight title: "Batalkan highlight ini"
@@ -355,8 +355,8 @@ ms:
             add friend button title: "Hantarkan %{user} permintaan sahabat"
             accept button: "Terima"
             accept request button: "Terima permintaan"
-            ignore button: "Biarkan"
-            ignore request button: "Abaikan permintaan"
+            ignore button: "Tolak"
+            ignore request button: "Permintaan ditolak"
     notes: 
         none user: "%{username} belum lagi mengambil nota."
         blank slate: 
@@ -394,7 +394,7 @@ ms:
         all notes: "Segala Nota"
         community notes: "Nota Komuniti"
         new note: "Nota Baru"
-        status field: "Note Status:"
+        status field: "Status Nota:"
         edit: "Mengedit"
         delete: "Hapuskan Nota Ini"
         confirm delete: "Ya, saya pasti"
@@ -407,6 +407,7 @@ ms:
         create failure: "Terjadi kesilapan semasa menyelamatkan nota"
         destroy success: "Nota dihapuskan"
         destroy failure: "Terjadi kesilapan semasa menghapuskan nota"
+        update success: "Nota telah dikemas kini"
     ref: 
         loading secondary: "Memuatkan Rujukan dalam Versi Kedua..."
         clear verses: "Batalkan Ayat-ayat yang Terpilih"
@@ -468,21 +469,21 @@ ms:
         edit notifications: "Uruskan Notifikasi"
         edit connections: "Akaun yang Berkaitan"
         edit devices: "Peranti yang Tersambung"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Langganan Ayat Hari Ini"
+        vod_subscription success: "Anda telah berjaya mengemaskini langganan Ayat Hari Ini anda!"
+        vod_subscription failure: "Maaf, terdapat masalah untuk mengemaskini langganan Ayat Hari Ini anda."
+        daily email delivery: "Penghantaran e-mel harian"
         time: "Masa"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Notifikasi push harian untuk aplikasi mudah alih"
         subscribe: "Langgan"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Berhenti melanggan"
         edit account_existence: "Hapuskan Akaun"
         delete account button: "Hapuskan Akaun YouVersion Saya"
         no devices: "Tiada peranti yang terhubung ke Akaun YouVersion anda"
         no devices download copy: "App Injil adalah Alkitab mobil percuma yang berdasarkan Alkitab online, YouVersion, yang boleh dipasang kepada hampir sebarang peranti mobil. App Injil ini membolehkan pengguna membaca Alkitab, memberitakan ayat kepada jaringan sosial mereka, bookmark petikan kegemaran, dan selainnya— segalanya dalam format yang sepadan dengan kehidupan yang semakin mobil. Kunjungilah <a href='https://www.bible.com/app'>bible.com/app</a> dari peranti mobil anda untuk download App Injil dan bersambung ke akaun anda!"
         yes delete: "Ya, Hapuskan Akaun Saya"
         account delete success: "Akaun YouVersion anda sudah selesai dihapuskan. Kami harap anda terus berinteraksi dengan Alkitab. Anda mungkin mendapat bantuan dari beberapa app di sini: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Jika anda mneghapuskan akaun, informasi, sejarah, dan input peribadi (seperti nota, bookmark, highlight dan selainnya) dalam YouVersion dan App Injil akan kekal dihapuskan. Tindakan ini tidak boleh diterbalikkan oleh anda ataupun kami. Jika anda pasti, sila berterusan di bawah."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "Aktiviti Terkini %{user}"
         my notes: "Nota"
         user notes: "Nota %{user}"
@@ -633,6 +634,7 @@ ms:
             notification errors: "Notifikasi anda tidak di-update akibat kesilapan berikut:"
             edit: "Mengedit"
             bio: "Bio"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Ya! Kata laluan anda sudah di-update."
             error: "Maaf, ada kesilapan semasa mengubah kata laluan anda."
@@ -936,7 +938,7 @@ ms:
         facebook: "YouVersion di Facebook"
         twitter: "YouVersion di Twitter"
         support: "Perlu bantuan dengan YouVersion?"
-        lead copy: "App Injil adalah Alkitab mobil yang percuma, berdasarkan Alkitab online, yang boleh dipasang atas hampir segala handphone. Ia membenarkan pengguna membaca Alkitab, memberitakan ayat kepada jaringan sosial, bookmark ayat kegemaran dan selainnya, melalui format yang bersaing dengan kehidupan yang sering beralih."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Sumber Media"
         now title: "Hari ini, dalam komuniti YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ ms:
                 subscribe heading: "Subscribe Pelan Alkitab."
                 subscribe description: "Pusatkan pada keseluruhan Alkitab, fokus pada topik, atau baca devosi daripada guru yang berkebolehan. Pilih pelan anda dan anda akan mendapati pilihan Alkitab menanti anda setiap hari."
                 download heading: "Bawa Alkitab bersama anda."
-                download description: "<a href='http://youversion.com/download'>Muat turun</a> Bible App secara percuma dalam mana-mana peranti mudah alih. Apabila anda menggunakan app mudah alih, nota anda, bookmark, highlight, pelan dan sebagainya akan di sync secara automatik di seluruh peranti anda."
+                download description: "<a href='https://bible.com/download'>Muat turun</a> Bible App secara percuma dalam mana-mana peranti mudah alih. Apabila anda menggunakan app mudah alih, nota anda, bookmark, highlight, pelan dan sebagainya akan di sync secara automatik di seluruh peranti anda."
             get started: "Mulakan dengan akaun percuma anda."
             word with you: "Firman Allah ada bersama anda."
             download action: "Muat turun Bible App"
