--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -210,7 +210,7 @@ nl:
     save: "Opslaan"
     cancel: "Annuleren"
     try the beta: "Probeer de bètaversie"
-    welcome to the beta: "Welkom op het vernieuwde YouVersion.com!"
+    welcome to the beta: "Welkom bij Bible.com!"
     highlight: "Markeer vers"
     comment: "Nieuwe reactie"
     note: "Nieuwe notitie"
@@ -220,7 +220,7 @@ nl:
     notes title: "Notities"
     friends: "Vrienden"
     groups: "Groepen"
-    mobile: "Mobiel"
+    mobile: "Mobiele apps"
     live: "Live/Groepen"
     first page: "Eerste pagina"
     last page: "Laatste pagina"
@@ -355,8 +355,8 @@ nl:
             add friend button title: "Stuur %{user} een vriendschapsverzoek"
             accept button: "Accepteer"
             accept request button: "Accepteer verzoek"
-            ignore button: "Negeer"
-            ignore request button: "Negeer verzoek"
+            ignore button: "Afwijzen"
+            ignore request button: "Verzoek afwijzen"
     notes: 
         none user: "%{username} heeft nog geen notities gemaakt."
         blank slate: 
@@ -407,6 +407,7 @@ nl:
         create failure: "Fout bij het opslaan van de notitie"
         destroy success: "Notitie verwijderd"
         destroy failure: "Fout bij het verwijderen van notitie"
+        update success: "Notitie bijgewerkt"
     ref: 
         loading secondary: "Verwijzingen in tweede vertaling aan het laden…"
         clear verses: "Verzen deselecteren"
@@ -482,7 +483,7 @@ nl:
         no devices download copy: "Gebaseerd op de online Bijbel, YouVersion, is de Bijbel App een gratis mobiele Bijbel die op bijna alle mobiele apparaten kan worden geïnstalleerd. De Bijbel App maakt het mogelijk voor gebruikers om in de Bijbel te lezen, verzen te delen op sociale media, bladwijzers te maken van hun favoriete gedeeltes en meer—allemaal op een manier die past bij het steeds mobielere leven. Ga naar <a href='https://www.bible.com/app'>bible.com/app</a> vanaf jouw apparaat en download de Bijbel App en koppel jouw account!"
         yes delete: "Ja, verwijder mijn account"
         account delete success: "Je YouVersion-account is succesvol verwijderd. We hopen dat je nog steeds op waardevolle wijze interactie beleefd met de Bijbel. Enkele van deze apps zouden je kunnen helpen om voort te gaan: <a href= 'http://www.youversion.com/free-bible-apps'>http://www.youversion.com/free-bible-apps</a>."
-        delete account description: "Wanneer je je account verwijdert, verwijder je blijvend al je informatie, geschiedenis en personalisatie (zoals notities, bladwijzers, markeringen etc.) op YouVersion.com en in de Bijbel App. Deze handeling kan niet ongedaan worden gemaakt door jou of door ons team. Als je er zeker van bent dat je wil doorgaan, ga dan onderaan verder."
+        delete account description: "Als je jouw account verwijdert, verwijder je daarmee definitief al jouw informatie, geschiedenis en personalisatie (zoals notities, bladwijzers, markeringen etc.) binnen Bible,com en de Bijbel app. Deze actie kan niet ongedaan gemaakt worden door jou of ons team. Als je er zeker van bent dat je wilt doorgaan, ga dan hieronder verder."
         user recent activity: "Recente activiteit van %{user}"
         my notes: "Notities"
         user notes: "Notities van %{user}"
@@ -633,6 +634,7 @@ nl:
             notification errors: "De volgende fout(en) zorgen ervoor dat je je meldingen niet kan updaten:"
             edit: "Bewerken"
             bio: "Biografie"
+            complete_first_last: "Vul je profiel aan door je voor en achternaam in te vullen"
         password: 
             updated: "Gelukt! Je hebt je wachtwoord bijgewerkt."
             error: "Sorry, er ging iets verkeerd tijdens het wijzigen van je wachtwoord."
@@ -936,7 +938,7 @@ nl:
         facebook: "YouVersion op Facebook"
         twitter: "YouVersion op Twitter"
         support: "Hulp nodig met YouVersion?"
-        lead copy: "De Bijbel App is een gratis Bijbel gebaseerd op de online Bijbel op YouVersion.com. De app kan op bijna alle toestellen worden geïnstalleerd. De Bijbel App stelt gebruikers in staat om de Bijbel te lezen, verzen te delen op sociale netwerken, bladwijzers te plaatsen bij favoriete passages, en meer—allemaal in een formaat dat past bij de toenemend mobiele levenstijl."
+        lead copy: "Gebaseerd op de online Bijbel, Bible.com is een gratis mobiele Bijbel die kan worden geïnstalleerd op vrijwel iedere telefoon. De Bijbel app stelt gebruikers in staat de Bijbel te lezen, verzen te delen met hun sociale netwerken, bladwijzers te plaatsen bij favoriete gedeelten en meer - op een manier die past bij een steeds mobielere levensstijl. "
         resources title: "Persbronnen"
         now title: "Vandaag in de YouVersion-gemeenschap"
         resources: 
@@ -998,7 +1000,7 @@ nl:
                 subscribe heading: "Abonneer je op Bijbelleesplannen."
                 subscribe description: "Lees de hele Bijbel, focus op een thema of volg de overdenkingen van een getalenteerde leraar. Kies een leesplan en elke dag staat er een Bijbelgedeelte voor je klaar."
                 download heading: "Neem de Bijbel met je mee."
-                download description: "<a href='http://youversion.com/download'>Download</a> de Bijbel App, hij is gratis voor elk mobiel apparaat. Wanneer je gebruikmaakt van de mobiele app worden je notities, bladwijzers, markeringen, leesplannen en meer automatisch gesynchroniseerd met al je toestellen."
+                download description: "<a href='https://bible.com/download'>Download</a> de Bijbel App, het is gratis voor elk mobiel apparaat. Wanneer je gebruikmaakt van de mobiele app worden jouw notities, bladwijzers, markeringen, leesplannen en meer automatisch gesynchroniseerd met al jouw toestellen."
             get started: "Ga aan de slag met jouw gratis account."
             word with you: "Gods Woord is met jou."
             download action: "Download de Bijbel App"
