--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -210,7 +210,7 @@
     save: "Lagre"
     cancel: "Avbryt"
     try the beta: "Prøv beta"
-    welcome to the beta: "Velkommen til nye YouVersion.com!"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "Highlight Verse"
     comment: "Ny kommentar"
     note: "Nytt notat"
@@ -220,7 +220,7 @@
     notes title: "Notater"
     friends: "Venner"
     groups: "Grupper"
-    mobile: "Mobil"
+    mobile: "Mobile Apps"
     live: "Live/Grupper"
     first page: "Første side"
     last page: "Siste side"
@@ -355,8 +355,8 @@
             add friend button title: "Send %{user} en venneforespørsel"
             accept button: "Godta"
             accept request button: "Godta forespørsel"
-            ignore button: "Ignorer"
-            ignore request button: "Ignorer forespørsel"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} har ikke laget noen notater ennå"
         blank slate: 
@@ -407,6 +407,7 @@
         create failure: "Det oppstod en feil under lagring av notat"
         destroy success: "Notat slettet"
         destroy failure: "Det oppstod en feil ved sletting av notat"
+        update success: "Note updated"
     ref: 
         loading secondary: "Laster referanser i sekundær oversettelse..."
         clear verses: "Nullstill valgte vers"
@@ -482,7 +483,7 @@
         no devices download copy: "Basert på Bibelen Online, YouVersion, er Bibel-appen en gratis mobil Bibel som kan installeres på nær sagt alle mobile enheter. Bibel-appen gir brukerne mulighet til å lese Bibelen, dele vers i sine nettverk, lage bokmerker av sine favoritt-avsnitt, og mer—alt i et format som tilpasser seg deres stadig økende mobile hverdag. Besøk &lt;a href:'https://www.bible.com/app'&gt;bible.com/app</a> fra din mobile enhet for å laste ned Bibel-appen og få kontakt med din konto!"
         yes delete: "Ja, slett min brukerkonto"
         account delete success: "Din YouVersion-konto har blitt slettet. Vi håper du fortsatt vil finne meningsfulle måter å benytte Bibelen på. Noen av disse appene kan være nyttige for deg videre: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Hvis du sletter kontoen din vil du fjerne all din informasjon, historikk og tilpasninger (som notater, bokmerker, markert tekst osv) både på YouVersion.com og i Bibel-appen for godt. Dette kan ikke gjenopprettes av deg eller vårt team. Hvis du er sikker på at du ønsker å gå videre, fortsett nedenfor."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "%{user}s nylige aktivitet"
         my notes: "Notater"
         user notes: "%{user}s notater"
@@ -633,6 +634,7 @@
             notification errors: "Følgende feil forhindret oppdatering av varslinger:"
             edit: "Rediger"
             bio: "Om meg"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Passordet ditt er endret."
             error: "En feil oppstod da du prøvde å endre passord."
@@ -936,7 +938,7 @@
         facebook: "YouVersion på Facebook"
         twitter: "YouVersion på Twitter"
         support: "Trenger du hjelp med YouVersion?"
-        lead copy: "Bibel-appen er en gratis mobil-bibel basert på onlinebibelen på YouVersion.com, som kan installeres på mange mobiltelefoner. Bibel-appen gir brukerne mulighet til å lese Bibelen, dele vers gjennom sosiale nettverk, bokmerke favorittavsnitt, med mer— alt i et format som følger utviklingen i deres stadig voksende mobile livsstil."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Ressurser for presse"
         now title: "I dag i YouVersion-samfunnet"
         resources: 
@@ -998,7 +1000,7 @@
                 subscribe heading: "Abonner på en leseplan."
                 subscribe description: "Les hele Bibelen, fokuser på et tema eller følg en andaktsserie skrevet av en dyktig lærer. Velg din plan og du vil hver dag finne en bibeltekst som venter på deg."
                 download heading: "Ta Bibelen med deg."
-                download description: "<a href='http://youversion.com/download'>Last ned</a> Bibel-appen gratis til alle mobile enheter. Når du bruker appen, vil notater, bokmerker, markeringer, planer og mer bli synkronisert automatisk mellom alle dine enheter."
+                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
             get started: "Kom i gang med din gratis brukerkonto."
             word with you: "Guds ord er med deg."
             download action: "Last ned Bibel-appen"
