--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -210,7 +210,7 @@ pl:
     save: "Zapisz"
     cancel: "Anuluj"
     try the beta: "Wypróbuj wersję Beta"
-    welcome to the beta: "Witaj w nowym YouVersion.com!"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "Highlight Verse"
     comment: "Nowy komentarz"
     note: "Nowa notatka"
@@ -220,7 +220,7 @@ pl:
     notes title: "Notatki"
     friends: "Przyjaciele"
     groups: "Grupy"
-    mobile: "Mobilne"
+    mobile: "Mobile Apps"
     live: "Na żywo/Grupy"
     first page: "Pierwsza strona"
     last page: "Ostatnia strona"
@@ -355,8 +355,8 @@ pl:
             add friend button title: "Wyślij %{user} zaproszenie do znajomych"
             accept button: "Zaakceptuj"
             accept request button: "Zaakceptuj zaproszenie"
-            ignore button: "Ignoruj"
-            ignore request button: "Ignoruj zaproszenie"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} nie ma jeszcze żadnych notatek."
         blank slate: 
@@ -407,6 +407,7 @@ pl:
         create failure: "Błąd, nie zapisano notatki"
         destroy success: "Notatka usunięta."
         destroy failure: "Błąd, nie usunięto notatki"
+        update success: "Note updated"
     ref: 
         loading secondary: "Ładowanie odniesienia w drugim przekładzie..."
         clear verses: "Wyczyść zaznaczenie wersetów"
@@ -482,7 +483,7 @@ pl:
         no devices download copy: "Aplikacja Biblii jest darmową mobilną Biblią, bazującą na Biblii on-line YouVersion, którą można zainstalować na niemal każdym urządzeniu. Aplikacja Biblii pozwala użytkownikom na czytanie Biblii, dzielenie się wersetami, zaznaczanie ulubionych fragmentów i korzystanie z innych funkcji—wszystko to w formie przyjaznej dla mobilnego trybu życia. Odwiedź <a href='https://www.bible.com/app'>bible.com/app</a> ze swojego urządzenia, aby pobrać Aplikację Biblii i połączyć swoje konto!"
         yes delete: "Tak, usuń moje konto"
         account delete success: "Twoje konto YouVersion zostało usunięte. Mamy nadzieję, że będzie nadal znajdował sposoby, aby studiować Biblię. Niektóre z tych aplikacji mogą być Ci pomocne:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Jeżeli usuniesz swoje konto, utracisz bezpowrotnie wszystkie swoje informacje , historię i personalizację (notatki, zakładki, zakreślenia itp.) na YouVersion.com i w Aplikacji Biblii. Czynność ta nie może zostać cofnięta ani przez Ciebie, ani przez nasz zespół. Jeżeli jesteś pewny, że chcesz kontynuować, postępuj wg instrukcji niżej."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "Ostatnia aktywność użytkownika %{user}"
         my notes: "Notatki"
         user notes: "Notatki użytkownika %{user}"
@@ -633,6 +634,7 @@ pl:
             notification errors: "Poniższe błędy uniemożliwiły aktualizację twoich powiadomień:"
             edit: "Edytuj"
             bio: "Biografia"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Sukces! Twoje hasło zostało zmienione."
             error: "Niestety, podczas próby zmiany hasła wystąpił błąd."
@@ -936,7 +938,7 @@ pl:
         facebook: "YouVersion na Facebooku"
         twitter: "YouVersion na Twitterze"
         support: "Potrzebujesz pomocy z YouVersion?"
-        lead copy: "Aplikacja Biblii jest bezpłatną mobilną Biblią, stworzoną na podstawie Biblii internetowej YouVersion.com. Aplikacja Biblii umożliwia użytkownikom czytanie Biblii, dzielenie się wersetami w serwisach społecznościowych, dodawanie zakładek do ulubionych fragmentów i więcej — wszystko w sposób dostosowany do coraz bardziej mobilnego stylu życia."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Materiały dla prasy"
         now title: "Dzisiaj w społeczności YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ pl:
                 subscribe heading: "Zapisz się do planów Biblii."
                 subscribe description: "Przeglądnij całą Biblię, skup się na temacie lub czytaj przemyślenia uzdolnionych nauczycieli. Wybierz plan a każdego dnia otrzymasz odpowiedni fragment Biblii."
                 download heading: "Weź tę Biblię ze sobą."
-                download description: "<a href='http://youversion.com/download'>Pobierz</a> Aplikację Biblii za darmo na dowolne urządzenie. Używaj aplikacji, notatek, zakładek, podkreśleń, planów czytania i innych funkcji a twoje treści będą automatycznie synchronizowane."
+                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
             get started: "Użyj swojego darmowego konta."
             word with you: "Słowo Boże jest z tobą."
             download action: "Pobierz Aplikację Biblii"
