--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -210,7 +210,7 @@ ru:
     save: "Сохранить"
     cancel: "Отменить"
     try the beta: "Попробовать бета-версию"
-    welcome to the beta: "Добро пожаловать но обновлённый YouVersion.com!"
+    welcome to the beta: "Добро пожаловать в Bible.com!"
     highlight: "Выделить маркером стих"
     comment: "Новый комментарий"
     note: "Новая заметка"
@@ -220,7 +220,7 @@ ru:
     notes title: "Заметки"
     friends: "Друзья"
     groups: "Группы"
-    mobile: "Приложения"
+    mobile: "Мобильные приложения"
     live: "Live / Группы"
     first page: "Первая страница"
     last page: "Последняя страница"
@@ -355,8 +355,8 @@ ru:
             add friend button title: "Отправить %{user} запрос дружбы"
             accept button: "Принять"
             accept request button: "Стать друзьями"
-            ignore button: "Игнорировать"
-            ignore request button: "Игнорировать"
+            ignore button: "Отклонить"
+            ignore request button: "Отклонить запрос"
     notes: 
         none user: "%{username} ещё не создавал заметок."
         blank slate: 
@@ -407,6 +407,7 @@ ru:
         create failure: "Ошибка сохранения закладки"
         destroy success: "Заметка удалена"
         destroy failure: "Ошибка удаления"
+        update success: "Заметка обновлена"
     ref: 
         loading secondary: "Загружаю ссылки в параллельном переводе..."
         clear verses: "Очистить выделение"
@@ -482,7 +483,7 @@ ru:
         no devices download copy: "Основанное на онлайн Библии YouVersion, Приложение Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами через социальные сети, добавлять в закладки любимые места и многое другое — и всё это доступно в формате, идущем в ногу с всё более мобильным образом жизни современного человека. Посетите <a href='https://www.bible.com/ru/app'>bible.com/app</a> со своего мобильного устройства, чтобы загрузить приложение Библия и подключить свой аккаунт!"
         yes delete: "Да, удалить"
         account delete success: "Ваш аккаунт YouVersion был успешно удалён. Мы надеемся, что вы продолжите искать пути взаимодействия с Библией. Некоторые из этих приложений могут быть полезны в вашем продвижении: <a href= https://www.bible.com/free-bible-apps>http://www.bible.com/free-bible-apps </a>"
-        delete account description: "Если вы удалите аккаунт, то полностью уничтожите всю информацию о себе, историю использования YouVersion и персональные данные (заметки, закладки, выделение цветом и т.д.) на YouVersion.com и в приложении Библия. Это действие не может быть отменено вами или сотрудниками нашей команды. Если вы уверены, что хотите продолжить, введите пароль и нажмите кнопку ниже."
+        delete account description: "Удаляя свою учетную запись, вы окончательно сотрёте всю вашу информацию, историю и персонализацию (такую как: заметки, закладки, выделения цветом и т.д.) в пределах Bible.com и приложения Библия. Это действие не может быть отменено вами или нами. Если вы уверены, что хотите продолжить, то смотрите ниже."
         user recent activity: "Последние действия %{user}"
         my notes: "Заметки"
         user notes: "Заметки %{user}"
@@ -633,6 +634,7 @@ ru:
             notification errors: "Следующая ошибка помешала обновлению настроек:"
             edit: "Изменить"
             bio: "О себе"
+            complete_first_last: "Заполните профиль, указав свое имя и фамилию"
         password: 
             updated: "Пароль успешно изменён."
             error: "Извините, при смене пароля возникла ошибка."
@@ -936,7 +938,7 @@ ru:
         facebook: "YouVersion на Facebook"
         twitter: "YouVersion в Twitter"
         support: "Нужна помощь по YouVersion?"
-        lead copy: "Основанное на онлайн Библии YouVersion.com, Приложение Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами через социальные сети, добавлять в закладки любимые места и многое другое — и все это доступно в формате, идущем в ногу с всё более мобильным образом жизни современного человека."
+        lead copy: "На основании Библии онлайн, Bible.com, приложения Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами из Библии в социальных сетях, ставить закладки своих любимых отрывков и многое другое - все в формате, который идет в ногу с всё более растущим мобильным образом жизни."
         resources title: "Для прессы"
         now title: "Сегодня в сообществе YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ ru:
                 subscribe heading: "Читайте Библию по планам."
                 subscribe description: "Прочитайте всю Библию, сфокусируйтесь на какой-то теме или же узнайте о том, что говорят теологи и учителя в своих назидательных статьях. Выберите себе план, и тогда каждый день вас будет ждать один из отрывков Библии."
                 download heading: "Берите Библию с собой."
-                download description: "<a href='http://youversion.com/ru/download'>Скачайте</a> приложение Библия на своё мобильное устройство совершенно бесплатно. Во время использования этого приложения ваши заметки, закладки, выделение цветом, чтение по планам и всё остальное будет автоматически синхронизировано между всеми устройствами."
+                download description: "<a href='https://bible.com/download'>Скачайте приложение Библия на своё мобильное устройство совершенно бесплатно. Во время использования этого приложения ваши заметки, закладки, выделение цветом, чтение по планам и всё остальное будет автоматически синхронизировано между всеми устройствами.</a>"
             get started: "Создайте бесплатный аккаунт."
             word with you: "Слово Божие всегда с вами."
             download action: "Установить приложение Библия"
