--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -210,8 +210,8 @@ sk:
     save: "Uložiť"
     cancel: "Zrušiť"
     try the beta: "Vyskúšajte beta verziu"
-    welcome to the beta: "Vitajte na novej stránke YouVersion.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Welcome to Bible.com!"
+    highlight: "Zvýrazniť verš"
     comment: "Nový komentár"
     note: "Nová poznámka"
     selected: "Označené"
@@ -220,7 +220,7 @@ sk:
     notes title: "Poznámky"
     friends: "Priatelia"
     groups: "Skupiny"
-    mobile: "Mobil"
+    mobile: "Mobile Apps"
     live: "Live/Skupiny"
     first page: "Prvá strana"
     last page: "Posledná strana"
@@ -251,12 +251,12 @@ sk:
         users like this: "%{last_liker_link} a %{more_link} označili, že sa im to páči"
         vod: 
             title: "Verš dňa"
-            get daily email: "Get daily email"
+            get daily email: "Denne dostávať email"
             subscribe: "Prihlásiť sa na odber"
             update: "Aktualizovať"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Zrušiť odoberanie"
             version: "Preklad"
-            view more: "View More"
+            view more: "Zobraziť viac"
             time: "Čas"
         friendship: 
             now friends: "Odteraz ste priateľom s používateľom"
@@ -283,7 +283,7 @@ sk:
             edit highlight title: "Upraviť toto zvýraznenie"
             edit bookmark title: "Upraviť túto záložku"
             edit note title: "Upraviť túto poznámku"
-            edit subscription: "Edit subscription"
+            edit subscription: "Upraviť odoberanie"
             delete: "Odstrániť"
             delete confirm: "Ste si istý?"
             delete highlight title: "Odstrániť toto zvýraznenie"
@@ -355,8 +355,8 @@ sk:
             add friend button title: "Poslať používateľovi %{user} žiadosť o priateľstvo"
             accept button: "Prijať"
             accept request button: "Prijať žiadosť"
-            ignore button: "Ignorovať"
-            ignore request button: "Ignorovať žiadosť"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "Používateľ %{username} zatiaľ nemá žiadne poznámky."
         blank slate: 
@@ -394,7 +394,7 @@ sk:
         all notes: "Všetky poznámky"
         community notes: "Komunitné poznámky"
         new note: "Nová poznámka"
-        status field: "Note Status:"
+        status field: "Stav poznámky:"
         edit: "Upraviť"
         delete: "Odstrániť túto poznámku"
         confirm delete: "Áno, naozaj"
@@ -407,6 +407,7 @@ sk:
         create failure: "Nepodarilo sa uložiť poznámku"
         destroy success: "Poznámka odstránená"
         destroy failure: "Poznámku sa nepodarilo odstrániť"
+        update success: "Note updated"
     ref: 
         loading secondary: "Načítavajú sa súradnice v sekundárnom preklade..."
         clear verses: "Zrušiť označenie veršov"
@@ -468,21 +469,21 @@ sk:
         edit notifications: "Spravovať notifikácie"
         edit connections: "Prepojené účty"
         edit devices: "Prepojené zariadenia"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Odoberanie Verša dňa"
+        vod_subscription success: "Úspešne ste aktualizovali vaše odoberanie Verša dňa!"
+        vod_subscription failure: "Prepáčte, ale vyskytol sa problém pri aktualizovaní vášho odoberania Verša dňa."
+        daily email delivery: "Denné zasielanie emailov"
         time: "Čas"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Denné push notifikácie pre mobilné aplikácie"
         subscribe: "Prihlásiť sa na odber"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Zrušiť odoberanie"
         edit account_existence: "Zmazať účet"
         delete account button: "Zmazať môj YouVersion účet"
         no devices: "K vášmu YouVersion účtu nie sú pripojené žiadne zariadenia"
         no devices download copy: "Aplikácia Biblia je bezplatná mobilná Biblia, založená na online Biblii YouVersion, ktorá môže byť nainštalovaná na takmer všetky mobilné zariadenia. Aplikácia Biblia používateľom umožňuje čítať Bibliu, zdieľať verše na sociálne siete, označiť si obľúbené pasáže a oveľa viac—to všetko spôsobom, ktorý drží krok so vzrastajúcim mobilným životným štýlom. Navštívte <a href='https://www.bible.com/app'>bible.com/app</a> z vášho mobilného zariadenia, stiahnite si aplikáciu Biblia a pripojte sa so svojim účtom!"
         yes delete: "Áno, zmazať môj účet"
         account delete success: "Váš YouVersion účet bol úspešne zmazaný. Dúfame, že si aj naďalej nájdete spôsob, ako čerpať z Biblie. Môžu vám k tomu napomôcť niektoré z týchto aplikácií: <a href=' https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
-        delete account description: "Ak zmažete váš účet, tak navždy stratíte všetky vaše údaje (poznámky, históriu, záložky, zvýraznenia atď.) na YouVersion.com a v aplikácii Biblia. Táto akcia sa nedá vrátiť späť. Ak ste si istý, že chcete pokračovať, urobte tak nižšie."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "Nedávna aktivita používateľa %{user}"
         my notes: "Poznámky"
         user notes: "Poznámky používateľa %{user}"
@@ -633,6 +634,7 @@ sk:
             notification errors: "Nasledujúce chyby zabránili aktualizácii vašich notifikácií:"
             edit: "Upraviť"
             bio: "Bio"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Hotovo! Vaše heslo bolo úspešne zmenené."
             error: "Prepáčte, pri menení vášho hesla sa vyskytla chyba."
@@ -936,7 +938,7 @@ sk:
         facebook: "YouVersion na Facebooku"
         twitter: "YouVersion na Twitteri"
         support: "Potrebujete pomôcť s YouVersion?"
-        lead copy: "Aplikácia Biblia, založená na online Biblii YouVersion.com je bezplatná aplikácia, ktorá sa dá nainštalovať do takmer ktoréhokoľvek telefónu. Aplikácia Biblia umožňuje používateľom čítať Bibliu, zdieľať verše na sociálne siete, pridať si obľúbené pasáže medzi záložky a o mnoho viac—všetko spôsobom, ktorý drží krok s narastajúcim mobilným životným štýlom."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Tlačové zdroje"
         now title: "Dnes v komunite YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ sk:
                 subscribe heading: "Využite plány čítania."
                 subscribe description: "Zamerajte sa na jednu tému, prejdite celú Bibliu, alebo si prečítajte nami vybrané úseky. Zvoľte si váš plán a každý deň vás bude čakať pasáž Biblie."
                 download heading: "Vezmite si Bibliu so sebou."
-                download description: "<a href='http://youversion.com/download'>Stiahnite si</a> bezplatnú Aplikáciu Biblia na akékoľvek mobilné zariadenie a vaše poznámky, záložky, zvýraznenia a plány sa budú automaticky synchronizovať so všetkými vašimi zariadeniami."
+                download description: "<a href='https://bible.com/download'>Stiahnite si</a> bezplatnú Aplikáciu Biblia na akékoľvek mobilné zariadenie a vaše poznámky, záložky, zvýraznenia a plány sa budú automaticky synchronizovať so všetkými vašimi zariadeniami."
             get started: "Začnite vytvorením vášho bezplatného účtu."
             word with you: "Božie Slovo je s vami."
             download action: "Stiahnite si aplikáciu Biblia"
