--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -210,7 +210,7 @@ sq:
     save: "Ruaj"
     cancel: "Anulo"
     try the beta: "Provoni versionin Beta"
-    welcome to the beta: "Mirë se vini te YouVersion.com i ri!"
+    welcome to the beta: "Mirë se vini në Bible.com!"
     highlight: "Thekso vargu"
     comment: "Koment i ri"
     note: "Shënim i ri"
@@ -220,7 +220,7 @@ sq:
     notes title: "Shënimet"
     friends: "Miqtë"
     groups: "Grupet"
-    mobile: "Pajisje e lëvizshme"
+    mobile: "Aplikacione për pajisje të lëvizshme"
     live: "Live/Grupet"
     first page: "Faqja e parë"
     last page: "Faqja e fundit"
@@ -356,7 +356,7 @@ sq:
             accept button: "Prano"
             accept request button: "Pranoje kërkesën"
             ignore button: "Refuzo"
-            ignore request button: "Refuzoje kërkesën"
+            ignore request button: "Refuzo kërkesën"
     notes: 
         none user: "%{username} nuk ka krijuar asnjë shënim akoma."
         blank slate: 
@@ -407,6 +407,7 @@ sq:
         create failure: "Gabim në ruajtjen e shënimit"
         destroy success: "Shënimi u fshi"
         destroy failure: "Gabim me fshirjen e shënimit"
+        update success: "Shënimi u përditësua"
     ref: 
         loading secondary: "Duke vendosur referimin në versionin e dytë..."
         clear verses: "Pastro vargjet e përzgjedhura"
@@ -482,7 +483,7 @@ sq:
         no devices download copy: "Bazuar në Biblën online, YouVersion, Programi i Biblës është një Bibël falas e lëvizshme që mund të instalohet në pothuaj çdo pajisje të lëvizshme. Programi i Biblës u mundëson përdoruesve të lexojnë Biblën, të ndajnë vargje në rrjetet e tyre sociale, të shënojnë pjesët e preferuara dhe shumë më tepër—të gjitha në një format që ruan mënyrën e tyre në rritje lëvizëve. Vizitoni <a href='https://www.bible.com/app'>bible.com/app</a> nga pajisja juaj e lëvizshme për të shkarkuar Programin e Biblën dhe për të lidhur llogarinë tuaj!"
         yes delete: "Po, fshije llogarinë time"
         account delete success: "Llogaria juaj YouVersion është fshirë në mënyrë të suksesshme. Ne shpresojmë që ju do të vazhdoni të gjeni mënyra domethënëse për të ndërvepruar me Biblën. Disa nga këto programe mund të jenë ndihmuese ndërsa ecni përpara: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Nëse e fshini llogarinë tuaj, ju do të eleminoni përgjithmonë të gjithë informacionin tuaj, historinë dhe personalizimet (si p.sh, shënimet, shenjuesit, theksimet etj.) brenda YouVersion.com dhe Programit të Biblës. Ky veprim nuk mund të kthehet mbrapsht nga ju apo ekipi ynë. Nëse jeni të sigurtë të ecni përpara, vazhdoni më poshtë."
+        delete account description: "Nëse e fshin llogarinë, do të heqësh përherë të gjitha informatat e tua, historinë dhe personalizimet (si shënimet, shenjuesit, theksimet etj.) brenda Bible.com dhe Programit të Biblës. Ky veprim nuk mund kthehet mbrapsht nga ju apo nga ekipi ynë. Nëse je i sigurt që dëshiron ta bësh këtë veprim, vazhdo më poshtë."
         user recent activity: "Aktiviteti i fundit për përdoruesin %{user}"
         my notes: "Shënime"
         user notes: "Shënimet e përdoruesit %{user}"
@@ -633,6 +634,7 @@ sq:
             notification errors: "Gabimet pasuese penguan përditësimin e njoftimeve tuaja:"
             edit: "Redakto"
             bio: "Biografi"
+            complete_first_last: "Përfundo profilin tënd duke plotësuar emrin dhe mbiemrin tënd"
         password: 
             updated: "Sukses! Ju e keni përditësuar fjalëkalimin tuaj."
             error: "Më vjen keq, pati një gabim në ndryshimin e fjalëkalimit tuaj."
@@ -936,7 +938,7 @@ sq:
         facebook: "YouVersion në Facebook"
         twitter: "YouVersion në Twitter"
         support: "Të duhet ndihmë me YouVersion?"
-        lead copy: "Bazuar në Biblën online, YouVersion.com, Programi i Biblës është një Bibël lëvizëse falas që mund të instalohet në pothuajse çdo telefon. Programi i Biblës i lejon përdoruesit të lexojnë Biblën, të ndajnë vargjet me rrjetet e tyre sociale, të shënojnë pasazhet e tyre të preferuara dhe më shumë; të gjitha në një format që ecën me stilin e tyre lëvizës në rritje."
+        lead copy: "I bazuar në Biblën online, Bible.com, Programi i Biblës është një Bibël e lëvizshme falas që mund të instalohet në pothuaj çdo telefon. Programi i Biblës u mundëson përdoruese të lexojnë Biblën, të ndajnë vargje në rrjetet e tyre sociale, të shënojnë pjesët e tyre të preferuara dhe jo vetëm kaq—të gjitha në një format që ruan mënyrën e tyre të jetesës gjithnjë e më shumë në lëvizje."
         resources title: "Burimet për shtypin"
         now title: "Sot në komunitetin YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ sq:
                 subscribe heading: "Pajtohu te planet e leximit"
                 subscribe description: "Lexoni të gjithë Biblën, përqendrohuni mbi një temë ose filloni një lexim devocional nga një mësues me dhunti. Zgjidhni planin tuaj dhe çdo ditë do të gjeni një përzgjedhje të Biblës duke të pritur."
                 download heading: "Merre Biblën me vete."
-                download description: "<a href='http://youversion.com/download'>Shkarko</a> falas Programin e Biblës në çdo pajisje të lëvizshme. Kur e përdorni programin në pajisjen e lëvizshme, shënimet tuaja, shenjuesit, theksimet, planet dhe të tjera veçori do të sinkronizohen automatikisht në të gjitha pajisjet tuaja."
+                download description: "<a href='https://bible.com/download'>Shkarko falas Programin e Biblës në çdo pajisje të lëvizshme. Kur e përdorni programin në pajisjen e lëvizshme, shënimet tuaja, shenjuesit, theksimet, planet dhe të tjera veçori do të sinkronizohen automatikisht në të gjitha pajisjet tuaja.</a>Shkarko falas Programin e Biblës në çdo pajisje të lëvizshme. Kur e përdorni programin në pajisjen e lëvizshme, shënimet tuaja, shenjuesit, theksimet, planet dhe të tjera veçori do të sinkronizohen automatikisht në të gjitha pajisjet tuaja."
             get started: "Filloni me llogarinë tuaj falas."
             word with you: "Fjala e Perëndisë është me ty."
             download action: "Shkarko Programin e Biblës"
