--- a/config/locales/sw.yml
+++ b/config/locales/sw.yml
@@ -210,7 +210,7 @@ sw:
     save: "okoa/kuokoa"
     cancel: "Ondoa"
     try the beta: "jaribu Beta"
-    welcome to the beta: "karibu katika YouVersion.com"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "Highlight Verse"
     comment: "maoni mpya"
     note: "Dondoo mpya"
@@ -220,7 +220,7 @@ sw:
     notes title: "maelezo"
     friends: "Marafiki"
     groups: "makundi"
-    mobile: "rununu"
+    mobile: "Mobile Apps"
     live: "Maisha/Makundi"
     first page: "Kurasa ya kwanza"
     last page: "Kurasa ya mwisho"
@@ -355,8 +355,8 @@ sw:
             add friend button title: "Tuma %{user} ombi la urafiki"
             accept button: "Kubali"
             accept request button: "Kubali ombi"
-            ignore button: "Puuzia"
-            ignore request button: "Puuzia ombi"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} hana maelezo yoyote."
         blank slate: 
@@ -407,6 +407,7 @@ sw:
         create failure: "Hitilafu katika utunzaji wa elezo"
         destroy success: "Elezo limeondolewa"
         destroy failure: "Hitilafu kuondoa elezo"
+        update success: "Note updated"
     ref: 
         loading secondary: "Marejeo yanatolewa katika Toleo Sekondari ..."
         clear verses: "Ondoa mistari iliyochaguliwa"
@@ -482,7 +483,7 @@ sw:
         no devices download copy: "Kulingana na Biblia ya hewani, YouVersion, App ya Biblia ni Biblia ya bure ya simu ambayo inaweza kuwekwa kwenye simu ya mkononi karibu yoyote. Apu ya Biblia inaruhusu watumiaji kusoma Biblia,  kushiriki mafungu na mitandao yao ya kijamii, kualamamisha mafungu uyapendao, na zaidi-yote katika mfumo unaoendena na ongezeko wa utumiaji wa simu za mkononi. Ziara ya <a href='https://www.bible.com/app'> bible.com / programu &lt;/ a&gt; kutoka kwa kifaa yako ya simu kushusha App Biblia na kuungana akaunti yako!"
         yes delete: "Ndio, Futa akaunti yangu"
         account delete success: "Akaunti yako ya YouVersion imetolewa. Tunatumaini kuwa utaendelea kutafuta njia ya maana kujijulisha mambo ya bibilia. Vitumizi hivi vinaweza kukusaidia unaposonga mbele:<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Ukifuta akaunti yako utatapoteza habari zako,historia yako, na ubinafsishaji (kama vile maelezo, maalamisho, mambo muhimu, nk) zilizondani ya YouVersion.com na apu ya Bibilia. Tendo hili haliwezi kurekebishwa na wewe au mtu wa timu yako. Ikiwa unauhakika ungependa kuendelea endelea hapa chini"
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "%{user} shughuli za hivi karibuni"
         my notes: "Maelezo yangu"
         user notes: "%{user} maelezo"
@@ -633,6 +634,7 @@ sw:
             notification errors: "(ma)kosa haya yalizuia taarifa zako kusahihishwa"
             edit: "Hariri"
             bio: "Wasifu"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Mafanikio! umewezesha kitambulisho chako cha siri."
             error: "Samahani, kulikuwa na hitilafu katika kubadili kitambulisho chako cha siri."
@@ -936,7 +938,7 @@ sw:
         facebook: "YouVersion katika Facebook"
         twitter: "YouVersion katika Twitter"
         support: "Unahitaji msaada wa utumizi wa  YouVersion?"
-        lead copy: "Kulingana na bibilia ya mtandao, YouVersion.com, apu ya Bibilia ni bibilia ya rununu iliyo bure na inaweza wekwa kwenye rununu karibu yeyote. Apu ya Bibilia inwawawezesha watumizi wasome bibilia, washirikishe mistari ya bibilia na mitandao mingine ya kijamii, waweke alama kwa vifungu wanavyopenda na vitu vingine vingi — yote katika mpangilio inayokuwezesha kuendelea na mitindo mipya ya rununu"
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Rasilimali za wanahabari"
         now title: "Leo katika Jamii yako ya YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ sw:
                 subscribe heading: "Jiandikishe kwa mipango ya Bibilia"
                 subscribe description: "Maliza Biblia nzima, kuzingatia mada, au kusoma ibada kutoka kwa mwalimu mzuri. Chagua mpango wako na kila siku utapata sehemu ya Biblia teule ikikusubiri."
                 download heading: "Chukua Biblia na wewe."
-                download description: "<a href='http://youversion.com/download'> Download </a> App ya Biblia ya bure kwenye kifaa chochote cha rununu. Unapo tumia App hii ya rununu, vidokezo vyako, maalamisho yako, mambo muhimu, mipango, na zaidi itaunganishwa moja kwa moja kwenye vifaa vyako vyote."
+                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
             get started: "Anza na akaunti yako ya bure."
             word with you: "Neno la Mungu iko pamoja na wewe."
             download action: "Download App ya Bibilia"
