--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -210,7 +210,7 @@ ta:
     save: "சேமி"
     cancel: "ரத்துசெய்"
     try the beta: "Beta பதிப்பினை முயற்சிக்கவும்"
-    welcome to the beta: "புதிய YouVersion.com க்கு வரவேற்கிறோம்!"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "Highlight Verse"
     comment: "புதிய கருத்துரை"
     note: "புதிய குறிப்பு"
@@ -220,7 +220,7 @@ ta:
     notes title: "குறிப்புகள்"
     friends: "நண்பர்கள்"
     groups: "குழுக்கள்"
-    mobile: "மொபைல்"
+    mobile: "Mobile Apps"
     live: "நேரடி/குழுக்கள்"
     first page: "முதல் பக்கம்"
     last page: "கடைசி பக்கம்"
@@ -355,8 +355,8 @@ ta:
             add friend button title: "%{user} க்கு நட்பு கோரிக்கை அனுப்பு"
             accept button: "ஏற்றுக்கொள்"
             accept request button: "கோரிக்கையை ஏற்றுக்கொள்"
-            ignore button: "புறக்கணி"
-            ignore request button: "கோரிக்கையை புறக்கணி"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} இன்னும் எந்த குறிப்புகளும் எடுக்கவில்லை."
         blank slate: 
@@ -407,6 +407,7 @@ ta:
         create failure: "குறிப்பை சேமிப்பதில் பிழை"
         destroy success: "குறிப்பு நீக்கப்பட்டது"
         destroy failure: "குறிப்பை நீக்குவதில் பிழை"
+        update success: "Note updated"
     ref: 
         loading secondary: "இரண்டாம்நிலை பதிப்பில் மேற்கோளை  ஏற்றிக் கொண்டிருக்கிறது ..."
         clear verses: "தேர்ந்தெடுக்கப்பட்ட வசனங்களை நீக்கவும்"
@@ -482,7 +483,7 @@ ta:
         no devices download copy: "ஆன்லைன் பைபிளின் அடிப்படையில், YouVersion.com , பைபிள் பயன்பாடு எந்த மொபைல் சாதனத்திலும் நிறுவ கூடிய ஒரு இலவச மொபைல் பைபிள் ஆகும். பைபிளை வாசிக்கவும், தங்கள் சமூக வலைப்பின்னல்களில் வேத வசனங்களை பகிர்ந்து கொள்ளவும், அவர்களுக்கு பிடித்த பத்திகளை புக்மார்க் செய்து கொள்ளவும் மேலும் பலவற்றை செய்ய இந்த பைபிள் பயன்பாடு, பயனர்களை அனுமதிக்கிறது.இவை எல்லாம் அவர்களில் அதிகமாகி வரும் மொபைல் வாழ்க்கை முறையோடு ஒத்து போகும் ஒரு வடிவத்தில் உள்ளது.உங்கள் மொபைல் சாதனத்தில் இந்த பைபிள் பயன்பாட்டினை பதிவிறக்கம் செய்யவும் மற்றும் உங்கள் கணக்கை இணைக்க <a href='https://www.bible.com/app'>bible.com/app</a> வருக."
         yes delete: "ஆம், எனது கணக்கை நீக்கி விடவும்"
         account delete success: "உங்கள் YouVersion கணக்கு நீக்கப்பட்டுவிட்டது. நீங்கள் தொடர்ந்து வேதாகமத்தொடு ஊடாட அர்த்தமுள்ள வழிகளை கண்டுபிடிப்பீர்கள் என்று நம்புகிறோம். நீங்கள் முன்னோக்கி செல்லும்போது இந்த பயன்பாடுகளில் சில பயனுள்ளதாக இருக்கலாம்.<a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
-        delete account description: "நீங்கள் உங்கள் கணக்கை நீக்கினீர்கள் என்றால், YouVersion.com மற்றும் பைபிள் பயன்பாடு இவைக்கு உள்ளில் உள்ள உங்களின் எல்லா தகவல், வரலாறு, மற்றும் தனிப்பயனாக்கம் (இந்த குறிப்புகள், புக்மார்க்குகள், சிறப்பு, போன்றவை)   அனைத்தும் நிரந்தரமாக அழிக்கப்பட்டுவிடும். உங்களாலோ அல்லது எங்கள் குழுவினாலோ இந்த நடவடிக்கையை மாற்ற இயலாது. நீங்கள் உறுதியாகவே  இதை செய்ய விரும்புகிறீர்கள் என்றால், கீழே செல்லுங்கள்."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "%{user}ன் அண்மைகால நிகழ்வுகள்"
         my notes: "குறிப்புகள்"
         user notes: "%{user} -யின் குறிப்புகள்"
@@ -633,6 +634,7 @@ ta:
             notification errors: "உங்கள் அறிவிப்புகளை மேம்படுத்துவதை பின்வரும் பிழை (கள்)  தடுத்தது:"
             edit: "திருத்தியமை"
             bio: "வாழ்க்கை"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "நீங்கள் உங்களுடைய கடவுசொல்லை புதுப்பித்து இருக்கிறீர்கள்"
             error: "மன்னிக்கவும், உங்களுடைய கடவுசொல்லை மாற்றுவதில் தவறு நேர்ந்து விட்டது."
@@ -936,7 +938,7 @@ ta:
         facebook: "Facebook இல் YouVersion"
         twitter: "Twitter இல் YouVersion"
         support: "YouVersion -ன் உதவி தேவையா?"
-        lead copy: "ஆன்லைன் பைபிள் அடிப்படையில்,  YouVersion.com, பைபிள் பயன்பாடு எந்த தொலைபேசியிலும் நிறுவ கூடிய ஒரு இலவச மொபைல் பைபிள். இந்த பைபிள் பயன்பாடு பயனர்கள் தங்கள் பைபிள் வாசிக்கவும், சமூக வலைப்பின்னல்களில் வசனங்களை பகிர்ந்து கொள்ளவும், தங்களுக்கு பிடித்த வசனங்களை புக்மார்க் செய்து கொள்ளவும், மற்றும் பலவற்றை செய்யவும் அனுமதிக்கிறது. இவை எல்லாம் அவர்களில் அதிகரித்து வரும் மொபைல் வாழ்க்கையோடு  ஒத்து போக வைக்கும் ஒரு வடிவத்தில்."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "பத்திரிக்கை வள ஆதாரங்கள்"
         now title: "YouVersion சமூகத்தில் இன்று"
         resources: 
@@ -998,7 +1000,7 @@ ta:
                 subscribe heading: "வேதாகமம் திட்டங்களுக்கு குழுசேர்க."
                 subscribe description: "முழு வேதாகமத்தையும் வாசித்து முடிக்கவோ, ஏதாவது ஒரு தலைப்பில் கவனம் செலுத்துகயோ, அல்லது ஆசீர்வதிக்கப்பட்ட ஒரு போதகரின் பக்தியுரைகளை வாசிக்கவோ செய்யுங்கள். உங்கள் திட்டத்தை தேர்ந்தெடுங்கள் ஒவ்வொரு நாளும் ஒரு வேதாகம தேர்ந்தெடுப்பு உங்களுக்கு  காத்திருப்பதை  காண்பீர்கள்."
                 download heading: "உங்களுடன் வேதாகமத்தை எடுத்து செல்லுங்கள்."
-                download description: "<a href='http://youversion.com/download'>Download</a> எந்த மொபைல் சாதனத்திற்குமான இலவச வேதாகம பயன்பாடு. நீங்கள் மொபைல் பயன்பாட்டை பயன்படுத்தும்  போது, உங்கள் குறிப்புகள், புக்மார்க்குகள், சிறப்பம்சங்கள், திட்டங்கள், மற்றவைகளும் உங்கள் அனைத்து சாதனங்களிலும் தானாகவே ஒத்திசைவு செய்யப்படும்."
+                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
             get started: "உங்கள் இலவச கணக்குடன் தொடங்குக."
             word with you: "தேவனின் வார்த்தை உங்களோடு இருக்கிறது."
             download action: "வேதாகம பயன்பாட்டை பதிவிறக்குக"
