--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -210,7 +210,7 @@ tl:
     save: "I-save"
     cancel: "Itigil"
     try the beta: "Subukan ang Beta"
-    welcome to the beta: "Tuloy po sa bagong Youversion.com!"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "I-haylayt ang Berso"
     comment: "Bagong Komentaryo"
     note: "Bagong Tala"
@@ -220,7 +220,7 @@ tl:
     notes title: "Mga tala"
     friends: "Mga Kaibigan"
     groups: "Mga Grupo"
-    mobile: "Mobile"
+    mobile: "Mobile Apps"
     live: "Live/Mga Grupo"
     first page: "Unang Pahina"
     last page: "Huling Pahina"
@@ -355,8 +355,8 @@ tl:
             add friend button title: "Magpadala kay %{user} ng hiling upang maging magkaibigan"
             accept button: "Tanggapin"
             accept request button: "Tanggapin ang kahilingan"
-            ignore button: "Huwag Pansinin"
-            ignore request button: "Huwag pansinin ang hiling"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "Si %{username} ay wala pang mga tala."
         blank slate: 
@@ -407,6 +407,7 @@ tl:
         create failure: "May pagkakamali sa pag-save ng tala"
         destroy success: "Ang tala ay nabura na"
         destroy failure: "May pagkakamali sa pagbura ng tala"
+        update success: "Note updated"
     ref: 
         loading secondary: "Ikinakarga ang Sanggunian sa Ikalawang Salin..."
         clear verses: "Burahin ang Napiling Talata"
@@ -482,7 +483,7 @@ tl:
         no devices download copy: "Batay sa online na Bibliya, ang YouVersion, ang Bible App ay isang libreng mobile na Bibliya na mai-install sa halos kahit anong aparato. Ang Bible App ay nagbibigay pahintulot sa mga gumagamit na magbasa ng Bibliya, mamahagi ng mga talata o berso sa mga social network, mag-bookmark ng mga paboritong kasulatan, at marami pa— sa format na angkop sa makabagong mobile na pamumuhay. Bumisita sa <a href='https://www.bible.com/app'>bible.com/app</a> mula sa iyong mobile para i-download ang Bible App at iugnay ang iyong account!"
         yes delete: "Oo, Burahin ang Aking Account"
         account delete success: "Ang iyong YouVersion account ay matagumpay na itinanggal. Umaasa kaming magkaroon ka ng mga makabuluhang paraan upang makipagugnayan sa Bibliya. Ilan sa apps na ito ay maaaring makatulong sa iyong pag-usad: <a href=http://www.youversion.com/free-bible-apps>http://www.youversion.com/free-bible-apps</a>"
-        delete account description: "Pag buburahin mo ang iyong account, permanente mong maaalis ang lahat ng impormasyon, kasaysayan, at gawain (tulad ng mga tala, bookmarks, highlights, atpb.) na napapaloob sa YouVersion.com at Bible App. Ang aksiyong ito ay hindi mo na maibabalik o ng aming team. Kung sigurado ka na, ipagpatuloy sa ibaba."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "Mga Huling Aktibidad ni %{user}"
         my notes: "Mga tala"
         user notes: "Mga Tala ni %{user}"
@@ -633,6 +634,7 @@ tl:
             notification errors: "Ang mga sumusunod na error(s) ang dahilan ng hindi pag-update ng iyong mga abiso:"
             edit: "I-edit"
             bio: "Bio"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Tagumpay! Na-update mo ang iyong password."
             error: "Paumanhin, may pagkakamali sa pagpalit ng iyong password."
@@ -936,7 +938,7 @@ tl:
         facebook: "YouVersion sa Facebook"
         twitter: "YouVersion sa Twitter"
         support: "Kailangan mo ba ng tulong sa YouVersion?"
-        lead copy: "Base sa online na Bibliya, YouVersion.com, ang Bible App ay isang libreng mobile na Bibliya na maaaring i-install sa halos kahit anong telepono. Ang Bible App ay nagbibigay pahintulot sa mga gumagamit nito na magbasa ng Bibliya, mamahagi ng mga berso sa mga social network, magmarka ng mga paboritong kasulatan, at mas maraming—lahat sa ayos na angkop sa kanilang makabagong mobile na pamumuhay."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "Mga Mapagkukunan ng Press"
         now title: "Ngayon sa Komunidad ng YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ tl:
                 subscribe heading: "Mag-subscribe sa Bible Plans."
                 subscribe description: "Basahin ang buong Bibliya, pagtuunan ang isang paksa, o magbasa ng isang devotional mula sa isang natatanging guro. Pumili ng plano at araw-araw ay may matutunghayan kang sipi ng Bibliyang para sa iyo."
                 download heading: "Dalhin ang Bibliya kasama mo."
-                download description: "<a href='http://youversion.com/download'>I-download</a> ang Bible App ng libre sa kahit aling aparato o mobile device. Kapag ginamit mo ang mobile app, ang iyong mga tala, palatandaan, highlights, sipi, at iba pa ay kaagad na lalabas sa lahat ng iyong mga aparato."
+                download description: "<a href='https://bible.com/download'>I-download</a> nang libre ang Bible App sa kahit aling aparato o mobile device. Sa paggamit mo ng mobile app, ang iyong mga tala, palatandaan, haylayt, sipi, at iba pa ay kaagad na magsi-sync sa lahat ng iyong mga aparato."
             get started: "Kumuha ng iyong libreng account."
             word with you: "Ang Salita ng Diyos ay kasama mo."
             download action: "I-download ang Bible App"
