--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -39,7 +39,7 @@ tr:
         share: "Paylaş"
         add comment: "Yorum ekle"
         my connections: "Bağlı Hesaplar"
-        connected as: "You are connected to %{connection} as %{username}."
+        connected as: "Sizin %{username}olarak %{connection} ile bağlantınız kuruldu."
         remove connection: "Bu bağlantıyı sil"
         connection friends: "Sizinle aynı zamanda %{connection} servisinde ve YouVersion'da kayıtılı olan bazı kullanıcılar:"
         errors: 
@@ -81,7 +81,7 @@ tr:
             description: "Kutsal Kitap Uygulaması az daha 100 milyon defa indirilip yüklendi -- mükemmel bir aşama! Ama biz daha yeni başladık. Kutsal Kitap Uygulaması'nı bugün indirin. Ve uygulamayı arkadaşlarınız ile paylaşın. Birlikte tarih yazalım!"
         mobile: 
             title: "Kutsal Kitap Uygulaması"
-            description: "Read God’s Word at anytime, anywhere using the YouVersion Bible App. Share Scripture with friends, highlight and bookmark passages, and create a daily habit with Bible Plans. Available for iOS, Android, Blackberry, Windows Phone and more."
+            description: "YouVersion Kutsal Kitap Uygulamasını kullanarak, Tanrı'nın sözünü her anda her yerde okuyabilirsiniz. Seçtiğiniz ayetleri renklendirerek vurgulu hale getirebilir, yer imlerinize ekleyebilir, arkadaşlarınızla paylaşabilirsiniz. Okuma Planlarını kullanarak Kutsal Kitap okumayı günlük bir alışkanlık haline getirebilirsiniz. iOS, Android, Blackberry, Windows Phone ve daha birçok sistem için kullanıma hazırdır."
         site: 
             title: "Bible.com"
             description: "Bring the beauty and truth of the Bible into everyday life. With the YouVersion Bible App, you can read, watch, listen, and share on your smartphone or tablet, and online at Bible.com."
@@ -146,8 +146,8 @@ tr:
     share error: "İletinizi paylaşmaya çalışırken bir hata oluştu. Lütfen tekrar deneyiniz."
     google plus: "Google+"
     connect to: "%{connection} hesabınıza bağlanın"
-    deleted connection: "Successfully removed your connection to %{connection}."
-    deleted connection error: "Sorry, there was an error removing your connection to %{connection}."
+    deleted connection: "%{connection} ile bağlantınız başarıyla kapatılmıştır."
+    deleted connection error: "Özür dileriz, %{connection} ile bağlantınızı kapatırken bir hata oluştu."
     connection marketing: "YouVersion'ı arkadaşlarınızla kullanmak daha eğlencelidir! YouVersion'u diğer sosyal ağlarınıza bağlayın ve YouVersion'a kayıtlı olan dostlarınızı anında bulup takip edin. Hesaplarınızı bağlamak ayrıca bir-iki tıklama ile içerik paylaşmanızı sağlar. Sizin izniniz olmadan bu hesaplara hiç bir şey yayınlamayız."
     next step connections: "Sonraki Adım: Sosyal ağ hesaplarınıza bağlantı kurun ve arkadaşlarınızı bulun"
     no notes found: "%{username} adlı kullanıcının notları yok"
@@ -210,8 +210,8 @@ tr:
     save: "Kaydet"
     cancel: "İptal"
     try the beta: "Beta sürümünü dene"
-    welcome to the beta: "Yenilenmiş YouVersion.com'a hoşgeldiniz!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Bible.com'a Hoş Geldiniz!"
+    highlight: "Ayeti Vurgula"
     comment: "Yeni Yorum"
     note: "Yeni Not"
     selected: "Seçili"
@@ -220,7 +220,7 @@ tr:
     notes title: "Notlar"
     friends: "Arkadaşlar"
     groups: "Gruplar"
-    mobile: "Mobil Sürümler"
+    mobile: "Mobil Uygulamalar"
     live: "Live/Gruplar"
     first page: "İlk Sayfa"
     last page: "Son Sayfa"
@@ -231,7 +231,7 @@ tr:
     percentage display: "%{number}%"
     myself: "Benim"
     none found: "Girdiğiniz kriterlere göre hiçbir şey bulunamadı. Arama kriterlerinizi genişletmeye deneyiniz"
-    paginated items shown: "%{first_shown}–%{last_shown} of %{total_available}"
+    paginated items shown: "%{total_available} öğesinden %{first_shown}–%{last_shown}"
     160 character limit: "En fazla 160 karekter"
     recent versions: "En Son Kullanılan"
     or: 
@@ -251,12 +251,12 @@ tr:
         users like this: "%{last_liker_link} ve%{more_link} kişi bunu beğendi"
         vod: 
             title: "Günün ayeti"
-            get daily email: "Get daily email"
+            get daily email: "Günlük bildirim almak için e-posta üyeliği"
             subscribe: "Abone Ol"
             update: "Güncelle"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Üyelikten çık"
             version: "Çeviri"
-            view more: "View More"
+            view more: "Devamını Görüntüle"
             time: "Saat"
         friendship: 
             now friends: "Bu kişiyle arkadaş oldunuz:"
@@ -283,7 +283,7 @@ tr:
             edit highlight title: "Bu vurguyu düzenle"
             edit bookmark title: "Bu yer imini düzenle"
             edit note title: "Bu notu düzenle"
-            edit subscription: "Edit subscription"
+            edit subscription: "Üyeliği düzenle"
             delete: "Sil"
             delete confirm: "Emin misiniz?"
             delete highlight title: "Bu vurguyu sil"
@@ -355,8 +355,8 @@ tr:
             add friend button title: "%{user} adlı kullanıcından arkadaşlık talebinde bulunun"
             accept button: "Kabul Et"
             accept request button: "Talebi kabul et"
-            ignore button: "Yoksay"
-            ignore request button: "Talebi gözardı et"
+            ignore button: "Reddet"
+            ignore request button: "Talebi reddet"
     notes: 
         none user: "%{username} adlı kullanıcının notları yok"
         blank slate: 
@@ -407,6 +407,7 @@ tr:
         create failure: "Notu kaydederken hata oluştu"
         destroy success: "Not silindi"
         destroy failure: "Notu silerken hata oluştu"
+        update success: "Not güncellendi"
     ref: 
         loading secondary: "Ayetler İkinci Çeviride Yükleniyor..."
         clear verses: "Seçili Ayetleri Sıfırla"
@@ -469,20 +470,20 @@ tr:
         edit connections: "Bağlı Hesaplar"
         edit devices: "Bağlı Mobil Cihazlar"
         vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
+        vod_subscription success: "Günün Ayeti üyeliğinizi başarıyla güncellediniz."
+        vod_subscription failure: "Özür dileriz, Günün Ayeti üyeliğinizi güncellerken bir hata oluştu."
         daily email delivery: "Daily email delivery"
         time: "Saat"
         daily push notifications: "Daily push notifications for mobile apps"
         subscribe: "Abone Ol"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Üyeliği iptal et"
         edit account_existence: "Hesabı sil"
         delete account button: "YouVersion Hesabımı Sil"
         no devices: "YouVersion hesabınıza bağlı olan herhangi bir mobil cihaz bulamadı."
         no devices download copy: "Kutsak Kitap Uygulaması YouVersion on-line Kutsal Kitap yazılımını baz alan bedavaya indirebileceğiniz bir uygulamadır. Az daha tüm mobil cihazlarda çalışır. Kutsal Kitap Uygulamasını kullanarak, kullanıcılar Kutsal Kitap'ı okuyup, sosyal ağlarında ayet paylaşabilir, sevdikleri bölümlerin yer imlerini kaydedebilir, ve daha neler neler yapabilir! Ve bunların hepsi giderek daha gezgin olan hayat tarzımıza uygun bir şekilde yapılabilir. Uygulamayı indirmek ve hesabınıza bağlamak için mobil cihazınızdan  <a href='https://www.bible.com/app'>bible.com/app</a> web adresini ziyaret edin."
         yes delete: "Evet, Hesabım Silinsin"
         account delete success: "YouVersion hesabınız başarıyla silinmiştir. Kutsal Kitap'ta anlamlı vakit geçirmek için başka yollar keşfedip kullandığınıza umut ederiz. Belki şu linkteki uygulamalar size yardımcı olabilir: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Hesabnızı silerseniz, YouVersion sitesinde ve Kutsal Kitap Uygulamasında kayıtlı olan bilgilerinizin hepsini (notlarınız, yer imleriniz, vurgularınız v.s.) temelli olarak silinecektir. Bu hareket ne sizin tarafınızdan ne de bizim tarafımızdan geri alınabilir. Bunu yapmak istediğinizden emin iseniz, aşağıdan devam edebilirsiniz."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "%{user} — Yeni Hareketler"
         my notes: "Notlar"
         user notes: "%{user} — Notlar"
@@ -633,6 +634,7 @@ tr:
             notification errors: "Bildirimlerinizi güncellemeye çalışırken şu hata(lar) oluştu:"
             edit: "Düzenle"
             bio: "Biyografi"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "Parolanız başarıyla güncellendi!"
             error: "Parolanızı değiştirirken bir hata oluştu. Özür Dileriz."
@@ -936,7 +938,7 @@ tr:
         facebook: "YouVersion Facebook'ta"
         twitter: "YouVersion Twitter'de"
         support: "YouVersion'ı kullanırken yardıma ihtiyacınız var mı?"
-        lead copy: "Kutsal Kitap Uygulaması, YouVersion.com’daki Kutsal Kitap yazılımını temel alan bedava bir yazılımdır. Hemen hemen tüm akıllı telefonlara yüklenebilir. Kutsal Kitap uygulamasında kullanıcıların Kutsal Kitap’ı okuma yanı sıra yapabileceği birçok eylem vardır: ayetler sosyal ağlar ile paylaşılabilir, sevilen kısımlar yer imi olarak saklanabilir, ve daha neler neler. Kutsal Kitap uygulaması kullanıcıların mobil yaşam tarzlarına çok uygundur!"
+        lead copy: "Bible.com'daki çevrimiçi Kutsal Kitap üzerine kurulmuş olan Kutsal Kitap Uygulaması az daha tüm akıllı cep telefonlarına yüklenebilen mobil bir Kutsal Kitap'tır. Kutsal Kitap Uygulaması kullanıcılarına Kutsal Kitap'ı okuma, arkadaşlarıyla sosyal ağlar aracılığıyla ayetleri paylaşma, beğendikleri ayetleri yer imlerine ekleme gibi birçok imkan sağlar. Ve bunların hepsi gittikçe mobilleşen yaşam tarzına uygun bir şekilde olmaktadır."
         resources title: "Basın Kaynakları"
         now title: "YouVersion Toplumunda Bugün"
         resources: 
@@ -998,7 +1000,7 @@ tr:
                 subscribe heading: "Kutsal Kitap okuma planlarına abone olun."
                 subscribe description: "Kutsal Kitap'ın tamamını okuyun. Belirli bir konuya odaklanın. Veya yetenekli bir hocanın düşüncelerini okuyun. Okuma Planınızı seçın. Her gün Kutsal Kitap'ın yeni bir bölümü sizin için hazır olsun."
                 download heading: "Kutsal Kitap'ı yanınızda bulundurun."
-                download description: "Kutsal Kitap Uygulamasını herhangi bir mobil cihaza bedavaya <a href='http://youversion.com/download'>indirin</a>. Mobil uygulamayı kullanırsanız notlarınız, yer imleriniz, vurgularınız, okuma planlarınız ve daha neler otomatik olarak tüm cihazlarınızda güncellenir."
+                download description: "Kutsal Kitap uygulamasını cihazınıza indirin.<a href='https://bible.com/download'>Tüm mobil cihazlarla uyumludur ve ücretsizdir.</a>Bu mobil uygulamadaki notlarınız, yer imleriniz, vurgularınız, okuma planlarınız ve uygulama içeriğinde yer alan daha birçok öğe otomatik olarak öbür cihazlarınızla da eşleşebilir."
             get started: "Bedavaya kaydolup Kutsal Kitap kullanımınıza başlayın."
             word with you: "Tanrı'nın Sözü yanınızda."
             download action: "Kutsal Kitap Uygulamasını İndirin"
