--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -164,12 +164,12 @@ uk:
     compare all versions: "Порівняйте Усі Версії"
     link will be added: "Буде Додано"
     my picture: "Оновити Моє Фото"
-    my notifications: "Робочі сповіщення"
+    my notifications: "Керувати сповіщеннями"
     my devices: "Приєднані пристрої"
     language name: "Українська"
     sign in: "Увійти"
     sign up: "Зареєструватися"
-    have an account: "Чи маєте вже обліковий запис?"
+    have an account: "Вже маєте обліковий запис?"
     no account: "Не маєте облікового запису?"
     successful sign-in: "Підписано як %{user}!"
     successful sign-out: "Підписано!"
@@ -210,7 +210,7 @@ uk:
     save: "Зберегти"
     cancel: "Скасувати"
     try the beta: "Спробуйте Beta"
-    welcome to the beta: "Запрошуємо до нового YouVersion.com!"
+    welcome to the beta: "Ласкаво просимо в Bible.com!"
     highlight: "Виділити вірш"
     comment: "Новий коментар"
     note: "Нова нотатка"
@@ -220,7 +220,7 @@ uk:
     notes title: "Нотатки"
     friends: "Друзі"
     groups: "Групи"
-    mobile: "Мобільний"
+    mobile: "Мобільні додатки"
     live: "Наживо/групи"
     first page: "Перша сторінка"
     last page: "Остання сторінка"
@@ -355,8 +355,8 @@ uk:
             add friend button title: "Надіслати %{user} запит дружби"
             accept button: "Прийняти"
             accept request button: "Прийняти запит"
-            ignore button: "Нехтувати"
-            ignore request button: "Ігнорувати запит"
+            ignore button: "Відхилити"
+            ignore request button: "Відхилити запит"
     notes: 
         none user: "%{username} ще не зробив жодних нотаток."
         blank slate: 
@@ -407,6 +407,7 @@ uk:
         create failure: "Помилка збереження нотатки"
         destroy success: "Нотатку видалено"
         destroy failure: "Помилка вилучення нотатки"
+        update success: "Нотатка оновлена"
     ref: 
         loading secondary: "Завантажуються посилання у другій версії…"
         clear verses: "Очистити Обрані Вірші"
@@ -482,7 +483,7 @@ uk:
         no devices download copy: "Заснована на онлайн Біблії YouVersion.com, програма Біблія є безкоштовною мобільною Біблією, яка може бути встановлена ​​практично на будь-який телефон. Програма Біблія дозволяє користувачам читати Біблію, ділитися віршами через соціальні мережі, додавати в закладки улюблені місця та багато іншого - і все це доступно в форматі, що йде в ногу з все більш мобільним способом життя сучасної людини. Відвідайте <a href='https://www.bible.com/app'>bible.com/app</a>   зі свого мобільного пристрою, щоб завантажити програму Біблія і підключити свій профіль!"
         yes delete: "Так, вилучити"
         account delete success: "Ваш профіль YouVersion був успішно видалений. Ми сподіваємося, що ви продовжите шукати шляхи взаємодії з Біблією. Деякі з цих програм можуть бути корисні в вашому просуванні: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Якщо ви видалите профіль, то повністю знищите всю інформацію про себе, історію використання YouVersion і персональні дані (замітки, закладки, виділення кольором і т. д.) на YouVersion.com і в додатку Біблія. Ця дія не може бути скасована вами або співробітниками нашої команди. Якщо ви впевнені, що хочете продовжити, то введіть пароль і натисніть кнопку нижче."
+        delete account description: "Якщо ви видалите ваш обліковий запис, ви повністю видалите всю вашу інформацію, історію та персоналізацію (нотатки, закладки, підсвітки та інше) з сайту Bible.com та програми Біблія. Ви або наша команда не зможемо повернути або відмінити цю дію. Якщо ви впевнені, що хочете це зробити, продовжуйте далі."
         user recent activity: "%{user}'s Останні Дії"
         my notes: "Мої нотатки"
         user notes: "%{user}'s Записи"
@@ -633,6 +634,7 @@ uk:
             notification errors: "Наступна помилка(и) перешкодили оновленню ваших сповіщень:"
             edit: "Редагувати"
             bio: "Про себе"
+            complete_first_last: "Заповніть профіль, вказавши своє прізвище та ім'я"
         password: 
             updated: "Ваш пароль успішно оновлено."
             error: "На жаль, під час зміни паролю виникла помилка."
@@ -815,7 +817,7 @@ uk:
     videos: 
         title: "Відео"
         all: "Усі відео"
-        related scripture: "Пов'язаний рукопис"
+        related scripture: "Пов'язане Писання"
     licenses: 
         authorized: 
             heading: "Ваш зміст дозволено"
@@ -934,9 +936,9 @@ uk:
         email: "Електронна пошта"
         blog: "Блоґ YouVersion"
         facebook: "YouVersion на Facebook"
-        twitter: "YouVersion на Твіттері"
+        twitter: "YouVersion на Twitter"
         support: "Потрібна допомога з YouVersion?"
-        lead copy: "Заснована на інтернет Біблії YouVersion.com, програма Біблія є безкоштовною мобільною Біблією, яка може бути встановлена ​​практично на будь-який телефон. Програма Біблія дозволяє користувачам читати Біблію, ділитися віршами через соціальні мережі, додавати в закладки улюблені місця та багато іншого - і все це доступно в форматі, що йде в ногу з все більш мобільним способом життя сучасної людини."
+        lead copy: "Програма Біблія, побудована на основі сайту Bible.com, це безкоштовна мобільна Біблія, що може бути встановлена майже на будь-який телефон. Програма Біблія дає можливість користувачам читати Біблію, ділитися віршами в соціальних мережах, додавати в закладки улюблені вірші та більше — все в форматі, який йде в ногу із все більш мобільним стилем життя."
         resources title: "Для преси"
         now title: "Сьогодні у Спільноті YouVersion"
         resources: 
@@ -968,13 +970,13 @@ uk:
         t2 copy: "Ця програма допомагає мені читати Слово Боже набагато більш послідовно і тримає мене на шляху кожен день. Вона легка у використанні і пропонує безліч функцій ... Мені дуже подобається!"
         t3: "Чудова програма!"
         t3 copy: "Відмінна програма з широким вибором Біблій, з яких кожен може вибрати підходящу для себе. ... Аудіо Біблії також чудові і сприймаються легко."
-        iphone ipad: "Айфон/Айпед"
-        android: "Андроїд"
-        blackberry: "Блекберрі"
+        iphone ipad: "iPhone/iPad"
+        android: "Android"
+        blackberry: "BlackBerry"
         windows phone: "Windows Phone"
         hp palm: "HP/Palm"
         java: "Java"
-        symbian: "Симбіан"
+        symbian: "Symbian"
         mobile web: "Мобільний Інтернет"
         amazon: "Kindle Fire"
     pages: 
@@ -998,7 +1000,7 @@ uk:
                 subscribe heading: "Підпишіться на Біблійні Плани."
                 subscribe description: "Посильте всю Біблію, зосередьтеся на темі, або читайте роздуми від талановитого вчителя. Виберіть свій план і щодня ви знайдете частинку Біблію, яка чекатиме на вас."
                 download heading: "Візьміть Біблію з собою."
-                download description: "<a href='http://youversion.com/download'>Завантажте</a> безкоштовну програму Біблія для будь-якого мобільного пристрою. Коли ви використовуєте мобільну програму, то ваші нотатки, закладки, плани і усе інше будуть автоматично синхронізовані між усіма вашими пристроями."
+                download description: "<a href='https://bible.com/download'>Завантажте</a>безкоштовну програму Біблія для будь-якого мобільного пристрою. Коли Ви використовуєте мобільну програму, то Ваші нотатки, закладки, плани і усе інше будуть автоматично синхронізовані між усіма Вашими пристроями."
             get started: "Розпочніть з безкоштовного профілю."
             word with you: "Боже Слово з вами."
             download action: "Завантажте програму Біблія"
