--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -210,7 +210,7 @@ vi:
     save: "Lưu"
     cancel: "Hủy"
     try the beta: "Thử phiên bản Beta"
-    welcome to the beta: "Chào mừng bạn đến với YouVersion.com phiên bản mới!"
+    welcome to the beta: "Chào mừng bạn đến với Bible.com!"
     highlight: "Tô màu câu Kinh Thánh"
     comment: "Bình luận mới"
     note: "Ghi chú mới"
@@ -220,7 +220,7 @@ vi:
     notes title: "Ghi chú"
     friends: "Bạn bè"
     groups: "Nhóm"
-    mobile: "Di động"
+    mobile: "App di động"
     live: "Nhóm trực tuyến"
     first page: "Trang đầu"
     last page: "Trang cuối"
@@ -355,8 +355,8 @@ vi:
             add friend button title: "Gởi %{user} yêu cầu kết bạn"
             accept button: "Chấp nhận"
             accept request button: "Chấp nhận yêu cầu"
-            ignore button: "Bỏ qua"
-            ignore request button: "Bỏ qua yêu cầu"
+            ignore button: "Từ chối"
+            ignore request button: "Từ chối yêu cầu"
     notes: 
         none user: "%{username} chưa tạo ghi chú nào."
         blank slate: 
@@ -407,6 +407,7 @@ vi:
         create failure: "Lỗi lưu ghi chú"
         destroy success: "Đã xóa ghi chú"
         destroy failure: "Lỗi xóa ghi chú"
+        update success: "Đã cập nhật ghi chú"
     ref: 
         loading secondary: "Đang tải các tham khảo trong bản song hành..."
         clear verses: "Bỏ các câu được chọn"
@@ -482,7 +483,7 @@ vi:
         no devices download copy: "Dựa trên Kinh Thánh trực tuyến YouVersion, Bible App là Ứng dụng Kinh Thánh di động miễn phí mà bạn có thể cài đặt trên hầu hết mọi thiết bị. App Kinh Thánh giúp bạn đọc và chia sẻ Kinh Thánh trên các mạng xã hội, đánh dấu phân đoạn yêu thích, và còn hơn thế nữa—tất cả được thiết kế để bắt kịp nhu cầu sử dụng di động đang tăng cao hiện nay. Hãy vào trang <a href='https://www.bible.com/app'>bible.com/app</a> trên thiết bị di động của bạn để tải Ứng dụng Kinh Thánh và kết nối tài khoản!"
         yes delete: "Vâng, hãy xóa tài khoản của tôi."
         account delete success: "Tài khoản YouVersion của bạn đã được xóa thành công. Chúng tôi hi vọng bạn sẽ tiếp tục tìm được những phương thức hiệu quả để tương giao với Lời Chúa. Có thể một vài ứng dụng sau sẽ hữu ích cho bạn: <a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
-        delete account description: "Nếu bạn xóa tài khoản của mình, bạn sẽ vĩnh viễn mất toàn bộ thông tin, lịch sử, và điều chỉnh cá nhân (như ghi chú, đánh dấu, tô màu, v.v...) trong YouVersion.com cũng như trong App Kinh Thánh. Chính bạn hoặc đội ngũ kỹ thuật cũng không thể đảo ngược hành động này. Nếu bạn khẳng định mình muốn xóa tài khoản, hãy tiếp tục dưới đây."
+        delete account description: "Nếu xóa tài khoản, bạn sẽ xóa luôn tất cả thông tin, lịch sử và điều chỉnh cá nhân (như ghi chú, đánh dấu, tô màu, v.v...) trên Bible.com và App Kinh Thánh. Bạn hay chúng tôi đều không thể đảo ngược hành động này. Nếu chắc chắn muốn xóa tài khoản, xin bạn tiếp tục dưới đây."
         user recent activity: "Hoạt động gần đây của %{user}"
         my notes: "Ghi chú"
         user notes: "Ghi chú của %{user}"
@@ -633,6 +634,7 @@ vi:
             notification errors: "Các lỗi sau khiến bạn không cập nhật thông báo được:"
             edit: "Chỉnh sửa"
             bio: "Tiểu sử"
+            complete_first_last: "Điền họ và tên để hoàn chỉnh hồ sơ của bạn"
         password: 
             updated: "Bạn đã cập nhật thành công mật khẩu!"
             error: "Báo lỗi khi thay đổi mật khẩu!"
@@ -936,7 +938,7 @@ vi:
         facebook: "YouVersion trên Facebook"
         twitter: "YouVersion trên Twitter"
         support: "Cần trợ giúp với YouVersion?"
-        lead copy: "Dựa trên Kinh Thánh trực tuyến tại YouVersion.com, Ứng dụng Kinh Thánh là Kinh Thánh di động miễn phí mà bạn có thể cài đặt hầu như trên mọi thiết bị. Ứng dụng Kinh Thánh cho phép người sử dụng đọc và chia sẻ Kinh Thánh trên các mạng xã hội, đánh dấu phân đoạn yêu thích, và hơn thế nữa; tất cả được thiết kế để bắt kịp nhu cầu sử dụng di động đang tăng cao hiện nay."
+        lead copy: "Dựa trên Kinh Thánh trực tuyến tại Bible.com, App Kinh Thánh là ứng dụng Kinh Thánh được cài đặt miễn phí trên hầu như mọi thiết bị di động. App Kinh Thánh cho phép người sử dụng đọc Kinh Thánh, chia sẻ Lời Chúa trên các mạng xã hội, đánh dấu các phân đoạn yêu thích, và hơn thế nữa—tất cả được thiết kế để bắt kịp nhu cầu sử dụng di động ngày càng tăng cao."
         resources title: "Các nguồn thông tấn"
         now title: "Tin Tức Trong Ngày của Cộng Đồng YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ vi:
                 subscribe heading: "Đăng ký kế hoạch đọc Kinh Thánh"
                 subscribe description: "Bao quát toàn bộ Kinh Thánh, tập trung vào một chủ đề, hoặc đọc tĩnh nguyện từ một người thầy dạy được ơn. Hãy chọn một kế hoạch đọc Kinh Thánh mỗi ngày cho bạn!"
                 download heading: "Mang Kinh Thánh theo bạn"
-                download description: "<a href='http://youversion.com/download'>Tải</a> App Kinh Thánh miễn phí cho bất cứ thiết bị di động nào. Khi bạn sử dụng, toàn bộ ghi chú, đánh dấu, tô màu, kế hoạch... sẽ tự động đồng bộ hóa trong tất cả thiết bị của bạn."
+                download description: "<a href='https://bible.com/download'>Tải</a> App Kinh Thánh miễn phí cho bất cứ thiết bị di động nào. Khi bạn sử dụng, toàn bộ ghi chú, đánh dấu, tô màu, kế hoạch... sẽ tự động đồng bộ hóa trong tất cả thiết bị của bạn."
             get started: "Bắt đầu với tài khoản miễn phí"
             word with you: "Lời Chúa đồng hành cùng bạn"
             download action: "Tải App Kinh Thánh"
