--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -90,8 +90,8 @@ zh-CN:
                 title: "已绑定的账户"
     kids: 
         bible app: "圣经软件"
-        for: "for"
-        kids: "kids"
+        for: "孩童"
+        kids: "版"
         by youversion: "YouVersion提供的"
         help your kids: "帮助您的孩子爱上神的话。"
         free download: "免费下载！"
@@ -210,7 +210,7 @@ zh-CN:
     save: "保存"
     cancel: "取消"
     try the beta: "尝试测试版"
-    welcome to the beta: "欢迎来到新版 YouVersion.com 网站！"
+    welcome to the beta: "欢迎光临Bible.com！"
     highlight: "高亮显示经文"
     comment: "新评论"
     note: "新笔记"
@@ -220,7 +220,7 @@ zh-CN:
     notes title: "笔记"
     friends: "朋友"
     groups: "群组"
-    mobile: "移动设备"
+    mobile: "移动应用"
     live: "现场活动/群组"
     first page: "第一页"
     last page: "最后一页"
@@ -355,8 +355,8 @@ zh-CN:
             add friend button title: "给 %{user} 发出朋友请求"
             accept button: "接受"
             accept request button: "接受请求"
-            ignore button: "忽略"
-            ignore request button: "忽略请求"
+            ignore button: "拒绝"
+            ignore request button: "拒绝请求"
     notes: 
         none user: "%{username} 还未建立任何笔记。"
         blank slate: 
@@ -407,6 +407,7 @@ zh-CN:
         create failure: "保存笔记出错"
         destroy success: "笔记已删除"
         destroy failure: "删除笔记时出错"
+        update success: "笔记已更新"
     ref: 
         loading secondary: "载入第二圣经译本中的经节..."
         clear verses: "清除选定的经节"
@@ -482,7 +483,7 @@ zh-CN:
         no devices download copy: "基于 YouVersion 的在线圣经，YouVersion 圣经软件是一个几乎可以安装在任何移动设备上应用程序。YouVersion 圣经软件允许用户阅读圣经、在社交网络上分享经文、给自己喜欢的经文添加书签，还有更多功能——全部都以一种更符合用户日益增长的移动生活的方式进行。请通过您的移动设备访问 <a href='https://www.bible.com/app'>bible.com/app</a> 以便下载 YouVersion 圣经软件并连接到您的账户。"
         yes delete: "是的，删除我的账户"
         account delete success: "您的 YouVersion 账户已经成功删除。我们希望您能继续寻找更有意义的与圣经互动的方式。这些软件或许对您有帮助，请前往：<a href= 'https://www.bible.com/free-bible-apps'> http://www.bible.com/free-bible-apps </a>"
-        delete account description: "如果您删除账户，您将彻底删除您在 YouVersion 网站和圣经软件上的个人信息、历史记录和专属信息（比如笔记、书签、高亮显示的内容等）。这个行为一旦实施，您或者我们都不能恢复。如果您确定想删除账户，请根据下面提示继续。"
+        delete account description: "假如您删除在Bible.com和圣经软件里的账户， 这将永久性地清除关于您的所有资料，历史，以及您个人的随手笔记，书签，高亮显示等。此操作是无人（包括您自己或者我们团队）可以逆转的。假如您确定您要执行此操作，请继续。"
         user recent activity: "%{user} 最近的活动"
         my notes: "我的笔记"
         user notes: "%{user} 的笔记"
@@ -633,6 +634,7 @@ zh-CN:
             notification errors: "以下错误导致无法更新您的通知："
             edit: "编辑"
             bio: "个人介绍"
+            complete_first_last: "请在您个人档案中填妥名字与姓氏"
         password: 
             updated: "您的密码已成功修改！"
             error: "很抱歉！修改密码时发生错误。"
@@ -936,7 +938,7 @@ zh-CN:
         facebook: "YouVersion 的 Facebook 页面"
         twitter: "YouVersion 的 Twitter 页面"
         support: "需要帮助？"
-        lead copy: "以在线圣经 YouVersion.com 为基础，圣经软件是一个免费的、可以被安装在几乎所有手机上的电子圣经。圣经软件允许读者阅读圣经，在他们的社交网络上保存经文，标识他们喜欢的段落等等— 所有这些都与他们越来越行动化的生活方式相符合。"
+        lead copy: "基于在线圣经 Bible.com, 圣经软件是可以安装在几乎所有手机上的免费圣经。 该圣经软件允许用户读经，与他们的人际网络分享经句，对喜爱的段落设置书签等等 － 所有操作都与用户越来越多的移动生活方式相配。"
         resources title: "新闻资源"
         now title: "今日的 YouVersion 社区"
         resources: 
@@ -998,7 +1000,7 @@ zh-CN:
                 subscribe heading: "订阅计划"
                 subscribe description: "或覆盖整本圣经，或专注于一个主题，或跟从一个有恩赐的老师来灵修。选择一份读经计划，每一天就会有一段圣经供你阅读。"
                 download heading: "随身携带"
-                download description: "免费<a href='https://www.youversion.com/zh-CN/download'>下载</a>圣经软件到任何移动设备。当您在一个移动设备上使用圣经软件时，您的笔记、书签、高亮显示和读经计划等都将自动同步到您的其他移动设备上。"
+                download description: "<a href='https://bible.com/download'>免费下载圣经软件到任何行动设备。</a>当您使用行动程式时，您的笔记、书签、高亮显示、计划，以及其他功能将会自动在您所有的设备上同步。"
             get started: "注册免费账户，开始体验吧！"
             word with you: "神的话语与您同在"
             download action: "下载圣经软件"
