--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -210,7 +210,7 @@ zh-TW:
     save: "儲存"
     cancel: "取消"
     try the beta: "嘗試測試版"
-    welcome to the beta: "歡迎來到新的 YouVersion.com!"
+    welcome to the beta: "歡迎來到 Bible.com！"
     highlight: "醒目顯示經文"
     comment: "新評論"
     note: "新筆記"
@@ -220,7 +220,7 @@ zh-TW:
     notes title: "筆記"
     friends: "朋友"
     groups: "群組"
-    mobile: "行動設備"
+    mobile: "行動軟體"
     live: "現場活動/群組"
     first page: "第一頁"
     last page: "最後一頁"
@@ -355,8 +355,8 @@ zh-TW:
             add friend button title: "給 %{user} 發送朋友請求"
             accept button: "接受"
             accept request button: "接受請求"
-            ignore button: "忽略"
-            ignore request button: "忽略請求"
+            ignore button: "拒絕"
+            ignore request button: "拒絕請求"
     notes: 
         none user: "%{username} 還未創建任何筆記。"
         blank slate: 
@@ -407,6 +407,7 @@ zh-TW:
         create failure: "保存筆記時出錯誤"
         destroy success: "筆記已刪除"
         destroy failure: "刪除筆記時出錯誤"
+        update success: "筆記更新"
     ref: 
         loading secondary: "載入第二譯本裡的參考經文..."
         clear verses: "清除選定的經節"
@@ -482,7 +483,7 @@ zh-TW:
         no devices download copy: "以 YouVersion.com 的線上聖經為資源，聖經軟體是一個幾乎任何手機都可以安裝的免費行動聖經。聖經軟體讓用戶閱讀聖經、在社交網路上分享經節、在他們喜愛的經文裡添加書籤，還有更多功能 —— 全都與他們越來越行動化的生活方式配合無間。請在您的行動設備上訪問 <a href='https://www.bible.com/app'>bible.com/app</a> 以下載聖經軟體並連接您的帳戶！"
         yes delete: "是的，刪除我的帳戶"
         account delete success: "您的 YouVersion 帳戶已經成功被刪除了。我們希望您能繼續尋找有意義的方式來閱讀聖經。在您要離開之前，請考慮以下也許會有幫助的應用程序：&lt;a href='https://www.bible.com/free-bible-apps&gt; http://www.bible.com/free-bible-apps </a>"
-        delete account description: "如果您刪除帳戶，您將徹底刪除您在 YouVersion 網站和聖經軟體上的個人資料、讀經歷史和自訂化的資訊 (比如筆記、書籤、醒目顯示等等)。請切記這個行動是您或者我們都不能逆轉的。如果您確定要刪除帳戶，請在下方進行。"
+        delete account description: "當您刪除您的賬戶，您將在Bible.com 與聖經軟體永久性的消除您的所有資料、歷史和個人化的筆記 （如書籤、醒目標示等。）這個動作無法被還原。如果您確定這是您所要的，請繼續。"
         user recent activity: "%{user} 的近期活動"
         my notes: "筆記"
         user notes: "%{user} 的筆記"
@@ -633,6 +634,7 @@ zh-TW:
             notification errors: "以下的錯誤使您無法更新通知："
             edit: "編輯"
             bio: "個人簡介"
+            complete_first_last: "請在您個人檔案中填妥名字與姓氏"
         password: 
             updated: "成功了！您已經更換了您的密碼。"
             error: "抱歉，在更改您的密碼時發生錯誤。"
@@ -936,7 +938,7 @@ zh-TW:
         facebook: "Facebook 上的 YouVersion"
         twitter: "Twitter 上的 YouVersion"
         support: "需要幫助使用 YouVersion ?"
-        lead copy: "以 YouVersion 的線上聖經為資源，聖經軟體是一個幾乎任何手機都可以安裝的免費行動聖經。聖經軟體讓使用者閱讀聖經、在社交網路上分享經節、添加書籤在他們喜愛的經文裡，還有更多 —— 全都與他們越來越行動化的生活方式配合無間。"
+        lead copy: "以線上聖經Bible.com為基，聖經軟體是幾乎在任何款式的手機都可以安裝的免費行動聖經程式。聖經軟體讓用戶閱讀聖經、在社交網路上分享經節、書籤標記他們喜歡的經文等等 --- 一切操作都配合了用戶越來越移動化的生活方式。"
         resources title: "新聞資源"
         now title: "今日的 YouVersion 社群"
         resources: 
@@ -998,7 +1000,7 @@ zh-TW:
                 subscribe heading: "訂閱讀經計畫"
                 subscribe description: "或閱讀整本聖經、或專注於一個主題、或閱讀一位良師寫的靈修。選擇一份讀經計劃，每一天就會有一段特選經文等候您來閱讀。"
                 download heading: "隨身攜帶聖經"
-                download description: "<a href='http://youversion.com/download'>下載</a>免費的<strong>聖經軟體</strong>到任何行動設備。當您在行動設備上使用聖經軟體時，您的筆記、書籤、醒目標記和讀經計劃等都將自動同步到您的其他設備上。"
+                download description: "<a href='https://bible.com/download'>免費下載聖經軟體到任何行動設備。</a>當您在行動設備上使用聖經軟體時，您的筆記、書籤、醒目標示、計劃，以及其他功能都會自動在您所有的設備上同步。"
             get started: "註冊免費帳戶，開始體驗吧！"
             word with you: "上帝的話語與您同在！"
             download action: "下載聖經軟體"
@@ -1029,7 +1031,7 @@ zh-TW:
         404 contact support: "遇上難題？請聯絡我們的 <a href='%{support_url}'>支援團隊</a>。"
         404 explanation: "您可能需要再次從<a href='%{reader_path}'>首頁</a>試一下。如果仍然不行，請通知我們的 <a href='%{support_url}'>支援團隊</a>！"
         404 message: "非常抱歉！您搜尋的頁面並不存在。"
-        408 message: "很抱歉我們的伺服器沒有及時響應。"
+        408 message: "很抱歉我們的伺服器沒有及時回應。"
         408 explanation: "我們已經接到警示並將盡快解決一切持續存在的問題。希望您能盡快返回到聖經的閱讀中！"
         try again: "再試一次"
     versions: 
