--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -210,7 +210,7 @@ es:
     save: "Guardar"
     cancel: "Cancelar"
     try the beta: "Utilizar la Versión Beta"
-    welcome to the beta: "¡Bienvenidos al nuevo YouVersion.com!"
+    welcome to the beta: "¡Bienvenido a Bible.com!"
     highlight: "Resaltar Versículo"
     comment: "Nuevo Comentario"
     note: "Nueva Nota"
@@ -220,7 +220,7 @@ es:
     notes title: "Notas"
     friends: "Amigos"
     groups: "Grupos"
-    mobile: "Móvil"
+    mobile: "Aplicaciones Móviles"
     live: "En vivo/Grupos"
     first page: "Primera Página"
     last page: "Ultima Página"
@@ -355,8 +355,8 @@ es:
             add friend button title: "Enviar a %{user} solicitud de amistad"
             accept button: "Aceptar"
             accept request button: "Aceptar solicitud"
-            ignore button: "Ignorar"
-            ignore request button: "Ignorar solicitud"
+            ignore button: "Declinar"
+            ignore request button: "Rechazar solicitud"
     notes: 
         none user: "%{username} no ha tomado ninguna nota aún."
         blank slate: 
@@ -407,6 +407,7 @@ es:
         create failure: "Error al guardar nota"
         destroy success: "Nota eliminada"
         destroy failure: "Error al eliminar nota"
+        update success: "Nota actualizada"
     ref: 
         loading secondary: "Cargando Referencias en Versión Secundaria..."
         clear verses: "Deseleccionar Versículos"
@@ -482,7 +483,7 @@ es:
         no devices download copy: "Basada en la Biblia en línea, YouVersion, la Biblia App es una Biblia móvil gratuita que puede ser instalada en casi cualquier dispositivo móvil. La Biblia App le  permite a los usuarios leer la Biblia, compartir versículos con sus redes sociales, marcar sus pasajes favoritos, y más; todo en un formato que se mantiene al día con su estilo de vida cada vez más móvil. ¡Visite <a href='https://www.bible.com/app'>bible.com/app</a>  desde su dispositivo móvil para descargar la Biblia App y conectar su cuenta!"
         yes delete: "Si, Eliminar Mi Cuenta"
         account delete success: "Su cuenta de YouVersion ha sido exitosamente eliminada.  Anhelamos que continúe encontrando formas significativas a su vida para interactuar con la Biblia.  Algunas de las siguientes aplicaciones podrían serle de mucha ayuda en su crecimiento y relación con Dios: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "Si elimina su cuenta, estará permanentemente eliminando toda su información, historial, y personalizaciones en YouVersion.com y la Biblia App, tales como, notas, marcadores, resaltados, etc.  Esta acción no puede ser revertida por usted o nuestro equipo.  Si está seguro de continuar, proceda como indicado a continuación."
+        delete account description: "Si usted elimina su cuenta, eliminará permanentemente toda su información, historial, y personalizaciones (como sus notas, marcadores, resaltados, etc.) dentro de Bible.com y la Biblia App. Esta acción no puede ser revertida por usted o por nuestro equipo. Si está seguro que quiere seguir adelante, proceda a continuación."
         user recent activity: "Actividad Reciente de %{user}."
         my notes: "Notas"
         user notes: "Notas de %{user}"
@@ -633,6 +634,7 @@ es:
             notification errors: "El ( los) siguiente (s) error (es) impidió la actualización de sus notificaciones:"
             edit: "Editar"
             bio: "Bio"
+            complete_first_last: "Complete su perfil colocando su nombre y apellido"
         password: 
             updated: "¡Usted ha actualizado su contraseña exitosamente!"
             error: "Lo sentimos, hubo un error cuando se actualizaba su contraseña."
@@ -936,7 +938,7 @@ es:
         facebook: "YouVersion en Facebook"
         twitter: "YouVersion en Twitter"
         support: "¿Necesita ayuda con YouVersion?"
-        lead copy: "Basado en la Biblia en línea, YouVersion.com, la Biblia App es una Biblia móvil gratuita, que se puede instalar en casi cualquier teléfono. La Bibila App le permite a los usuarios leer la Biblia, compartir versículos con sus redes sociales, marcar sus pasajes favoritos, y más, todo en un formato que se mantiene al día con su creciente estilo de vida móvil."
+        lead copy: "Basada en la Biblia en línea, Bible.com, la Biblia App es una Biblia móvil gratuita que puede ser instalada en casi cualquier teléfono. La Biblia App permite a los usuarios leer la Biblia, compartir versículos en sus redes sociales, marcar sus pasajes favoritos, y mucho más— todo en un formato que se mantiene al día con su estilo de vida cada vez más móvil."
         resources title: "Recursos para Medios de Comunicación"
         now title: "Hoy en la Comunidad de YouVersion"
         resources: 
@@ -998,7 +1000,7 @@ es:
                 subscribe heading: "Subscribete a los Planes de Lectura de la Biblia."
                 subscribe description: "Lee toda la Biblia, enfócate en un tema, o lee un devocional de un buen maestro. Elige un Plan de Lectura y diariamente hallarás una selección bíblica esperando por ti."
                 download heading: "Lleva la Biblia Contigo."
-                download description: "<a href=' http://www.youversion.com/descargar'>Descarga</a> la Biblia App gratuitamente en cualquier dispositivo móvil. Cuando utilizas la aplicación móvil, tus notas, marcadores, planes de lectura, y más, serán sincronizados automáticamente en todos tus dispositivos."
+                download description: "<a href='https://bible.com/download'>Descargue</a>la Biblia App de forma gratuita en cualquier dispositivo móvil. Cuando utiliza la aplicación móvil, sus notas, marcadores, resaltados, planes, y más se sincronizarán automáticamente en todos sus dispositivos."
             get started: "Inicia creando tu cuenta gratuitamente."
             word with you: "Su Palabra está contigo."
             download action: "Descargar la Biblia App."
