--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -210,7 +210,7 @@ ja:
     save: "保存する"
     cancel: "キャンセル"
     try the beta: "ベータ版を試してみる"
-    welcome to the beta: "新しくなった YouVersion.com へようこそ！"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "聖句をハイライトする"
     comment: "新しいコメント"
     note: "新規ノート"
@@ -220,7 +220,7 @@ ja:
     notes title: "ノート"
     friends: "友だち"
     groups: "グループ"
-    mobile: "モバイル"
+    mobile: "Mobile Apps"
     live: "ライブ/グループ"
     first page: "最初のページ"
     last page: "最後のページ"
@@ -355,8 +355,8 @@ ja:
             add friend button title: "%{user} さんに友達申請を送信する"
             accept button: "承認"
             accept request button: "申請を承認する"
-            ignore button: "無視"
-            ignore request button: "申請を無視する"
+            ignore button: "辞退"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username} さんはまだノートがありません"
         blank slate: 
@@ -407,6 +407,7 @@ ja:
         create failure: "ノートの保存にエラーが発生しました"
         destroy success: "ノートが削除されました"
         destroy failure: "ノートの削除中にエラーが発生しました"
+        update success: "Note updated"
     ref: 
         loading secondary: "参照聖句を2つ目の聖書訳で読み込み中・・・"
         clear verses: "選択箇所を解除する"
@@ -482,7 +483,7 @@ ja:
         no devices download copy: "オンライン聖書（YouVersion.com）に基づいた聖書アプリは無料の携帯用聖書で、ほぼ全ての携帯デバイスにインストールできます。聖書アプリでは、聖書を読んだり、シーシャル･ネットワーク上で聖句をシェアしたり、お気に入りの聖句にブックマークをつけたりと色々なことができ、携帯を活用したライフスタイルにピッタリです。お使いになっている携帯デバイスから<a href='https://www.bible.com/app'>bible.com/app</a>にいって、聖書アプリをダウンロードし、あなたのアカウントに連携させましょう！"
         yes delete: "はい、私のアカウントを削除します"
         account delete success: "あなたのYouVersionアカウントが削除されました。今後も有意義な方法を用いて聖書の言葉に触れていかれますよう、お祈りいたします。参考までに、その他の便利なアプリをこちらからご覧ください。<a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
-        delete account description: "一旦アカウントを削除されますと、YouVersion.com及び聖書アプリ内にある全ての個人情報、履歴、パーソナライズしたもの(ノート、ブックマーク、ハイライトなど)が永久に削除されます。この手続きを無効にすることは、利用者側でも当方担当チームでも不可能です。ご理解のいただいた上でこの手続きを実行する場合は、以下にお進み下さい。"
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "%{user} さんの最近の利用履歴"
         my notes: "ノート"
         user notes: "%{user} さんのノート"
@@ -633,6 +634,7 @@ ja:
             notification errors: "以下のエラーにより通知設定の更新ができません:"
             edit: "編集"
             bio: "自己紹介"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "パスワードの更新に成功しました！"
             error: "申し訳ございません。パスワード変更の際、エラーが発生しました。"
@@ -936,7 +938,7 @@ ja:
         facebook: "YouVersionのFacebookページ"
         twitter: "YouVersionのTwitter"
         support: "YouVersionのヘルプが必要ですか?"
-        lead copy: "YouVersion.com のオンライン聖書を基盤とする聖書アプリは、ほぼ全機種の携帯電話に対応のダウンロード可能な無料の聖書です。聖書アプリでは、聖書を読んだり、ソーシャル・ネットワークで聖句をシェアしたり、好きな聖句にブックマークしたりすることができます。進化し続けるモバイル・ライフスタイルに常に最適な形態をとっていきます。"
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "プレス向け情報"
         now title: "今日のYouVersionコミュニティでは・・・"
         resources: 
@@ -998,7 +1000,7 @@ ja:
                 subscribe heading: "聖書プランに参加"
                 subscribe description: "聖書全体を読んだり、テーマを絞って読んだり、神様の御言葉を教える素晴らしい指導者からのデボーションを読んだり出来ます。読書プランを選ぶと、選んだプランのその日の聖句や聖書の箇所が、毎日表示されます。"
                 download heading: "聖書といつも一緒に"
-                download description: "どのような種類の携帯デバイスにも、聖書アプリが無料で<a href='http://youversion.com/download'>ダウンロード</a>できます。 携帯アプリを使う時には、あなたが既に書き留めているノート、ブックマーク、ハイライト、読書プランなどの機能は、自動的に全てのデバイスに同期されます。"
+                download description: "どのような種類の携帯デバイスにも、聖書アプリが無料で<a href='https://bible.com/download'>ダウンロード</a>できます。 携帯アプリを使う時には、あなたが既に書き留めているノート、ブックマーク、ハイライト、読書プランなどの機能は、自動的に全てのデバイスに同期されます。"
             get started: "無料アカウントを取得して始めましょう"
             word with you: "神様の御言葉はいつもあなたと共に"
             download action: "聖書アプリをダウンロード"
