--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -210,7 +210,7 @@ ko:
     save: "저장"
     cancel: "취소"
     try the beta: "베타 버젼을 사용해보세요."
-    welcome to the beta: "YouVersion.com에 오신 것을 환영합니다"
+    welcome to the beta: "Welcome to Bible.com!"
     highlight: "구절 하이라이트 하기"
     comment: "새로운 코멘트"
     note: "새 노트"
@@ -220,7 +220,7 @@ ko:
     notes title: "노트"
     friends: "내 친구"
     groups: "그룹"
-    mobile: "이동기기"
+    mobile: "Mobile Apps"
     live: "라이브/그룹"
     first page: "첫 페이지"
     last page: "마지막 페이지"
@@ -355,8 +355,8 @@ ko:
             add friend button title: "%{user}님께 친구 신청"
             accept button: "수락"
             accept request button: "요청 수락"
-            ignore button: "무시"
-            ignore request button: "요청 무시"
+            ignore button: "Decline"
+            ignore request button: "Decline request"
     notes: 
         none user: "%{username}님은 아직 작성한 노트가 없습니다."
         blank slate: 
@@ -407,6 +407,7 @@ ko:
         create failure: "노트 저장 오류"
         destroy success: "노트가 삭제되었습니다."
         destroy failure: "노트삭제 오류"
+        update success: "Note updated"
     ref: 
         loading secondary: "두번째 번역본에서 참고 구절을 로딩합니다."
         clear verses: "선택구절 취소"
@@ -482,7 +483,7 @@ ko:
         no devices download copy: "YouVersion 성경 앱은 거의 모든 이동 기기에 설치가 가능한 온라인 기반의 성경입니다. 성경 앱은 모바일 환경에서 성경을 읽고, 소셜 네트워크를 통해서 말씀을 나누고, 성경 구절을 책갈피하는 등등 여러가지 일들을 가능하게 해 줍니다.  여러분의 이동기기에서 <a href='https://www.bible.com/app'>bible.com/app</a>를 방문하셔서 성경 앱을 다운로드하고 계정을 연결하세요!"
         yes delete: "계정을 삭제해주세요."
         account delete success: "YouVersion 계정이 삭제되었습니다. 앞으로도 성경과 계속 동행하시기를 바랍니다.  아래의 앱들이 혹 도움이 될 것 같아서 소개합니다.\n<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "만약 계정을 삭제하시게되면, YouVersion이나 앱에 저장된 귀하의 개인 정보, 사용 내역 및 개인 설정이 (예를들면 노트, 책갈피, 하이라이트 등등) 영구히 지워집니다.  아울러 한 번 삭제된 내용은 귀하나 YouVersion 관리자도 재생할 수없습니다.   이 점을 감안하신 후에도 삭제를 원하시면 아래와 같이 진행하세요."
+        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
         user recent activity: "%{user}님의 최근활동"
         my notes: "내 노트"
         user notes: "%{user} 님 노트"
@@ -633,6 +634,7 @@ ko:
             notification errors: "아래 오류로 인해 알림 설정을 변경하지 못했습니다."
             edit: "수정"
             bio: "자기소개"
+            complete_first_last: "Complete your profile by filling in your first and last name"
         password: 
             updated: "비밀번호가 변경되었습니다!"
             error: "죄송합니다. 비밀번호를 변경에 오류가 발생하였습니다."
@@ -936,7 +938,7 @@ ko:
         facebook: "YouVersion 페이스북"
         twitter: "YouVersion 트위터"
         support: "YouVersion 사용에 도움이 필요합니까?"
-        lead copy: "온라인 성경을 기초로 한 YouVersion.com과 성경 앱은 거의 모든 종류의 스마트폰에 설치가 가능한 무료 모바일 성경입니다. 성경 앱은 성경을 읽고 소셜네트워크를 통하여 말씀을 공유할 수 있으며, 좋아하는 구절들을 책갈피 해 둘 수 있는 등 모바일 라이프스타일의 증가에 발맞춘 형태로 사용자에게 제공되고 있습니다."
+        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
         resources title: "기사 자료"
         now title: "YouVersion 공동체의 오늘"
         resources: 
@@ -998,7 +1000,7 @@ ko:
                 subscribe heading: "성경 읽기계획"
                 subscribe description: "성경 전체를 통독하거나, 주제별로 읽을 수 있습니다. 그리고 훌륭한 분들의 묵상을 읽을 수도 있습니다.  성경 읽기계획을 선택하기만 하면 매일 분량의 성경 내용이 자동으로 공급됩니다."
                 download heading: "늘 함께 하는 성경"
-                download description: "원하는 이동기기에서 성경 앱을 무료로 <a href='http://youversion.com/download'>다운로드</a> 받으세요. 개인 노트, 책갈피, 하이라이트, 읽기 계획 등이 자동으로 동기화 되므로, 어떤 앱에서든 같은 내용을 보실 수있습니다."
+                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
             get started: "무료 계정을 지금 만드셔서 바로 시작하세요."
             word with you: "하나님의 말씀이 당신과 함께 합니다."
             download action: "성경 앱 다운로드 하기"
